// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigCacheTestCases css css-import exported tests should compile 1`] = `
Array [
  "body {
	externally-imported: true;
}

@import url(\\"//example.com/style.css\\");
@import url(\\"https://fonts.googleapis.com/css?family=Roboto\\");
@import url(\\"https://fonts.googleapis.com/css?family=Noto+Sans+TC\\");
@import url(\\"https://fonts.googleapis.com/css?family=Noto+Sans+TC|Roboto\\");
body {
	externally-imported1: true;
}

body {
	externally-imported2: true;
}

p {
	color: steelblue;
}

p {
	color: antiquewhite;
}

.load-me {
	color: red;
}

.custom-extension{
    color: green;
}.using-loader { color: red; }
.link {
  color: #428bca;
}

.foo {
	color: red;
}

.relative {
	color: red;
}

.default {
	color: steelblue;
}

.mode {
	color: red;
}

.dist {
	color: steelblue;
}

.dist {
	color: steelblue;
}

.conditional-names {
  color: #428bca;
}

.custom-name {
	color: steelblue;
}

.style {
	color: steelblue;
}

.webpack {
	color: steelblue;
}

.default {
	color: steelblue;
}

/* Technically, this is not entirely true, but we allow it because the final file can be processed by the loader and return the CSS code */

/* Failed */


body {
	background: black;
}

body {
	background: black;
}

@layer default {
	body {
		background: black;
	}
}

@layer default {
	body {
		background: black;
	}
}

@supports (display: flex) {
	body {
		background: black;
	}
}

@supports (display: flex) {
	body {
		background: black;
	}
}

@media screen and (min-width: 400px) {
	body {
		background: black;
	}
}

@media screen and (min-width: 400px) {
	body {
		background: black;
	}
}

@layer default {
	@supports (display: flex) {
		body {
			background: black;
		}
	}
}

@layer default {
	@media screen and (min-width: 400px) {
		body {
			background: black;
		}
	}
}

@supports (display: flex) {
	@media screen and (min-width: 400px) {
		body {
			background: black;
		}
	}
}

@layer default {
	@supports (display: flex) {
		@media screen and (min-width: 400px) {
			body {
				background: black;
			}
		}
	}
}

@layer default {
	@supports (display: flex) {
		@media screen and (min-width: 400px) {
			body {
				background: black;
			}
		}
	}
}

@layer default {
	@supports (display: flex) {
		@media screen and (min-width: 400px) {
			body {
				background: black;
			}
		}
	}
}

@layer default {
	@supports (display: flex) {
		@media screen and (min-width: 400px) {
			body {
				background: black;
			}
		}
	}
}

@layer default {
	@supports (background: url(./img.png)) {
		@media screen and (min-width: 400px) {
			body {
				background: black;
			}
		}
	}
}

@layer default {
	@supports (background: url(\\"./img.png\\")) {
		@media screen and (min-width: 400px) {
			body {
				background: black;
			}
		}
	}
}

@media screen {
	body {
		background: black;
	}
}

@media screen {
	body {
		background: black;
	}
}

@media screen {
	body {
		background: black;
	}
}

body {
	background: black;
}

body {
	background: green;
}

@layer base {
	body {
		background: green;
	}
}

@supports (display: flex) {
	body {
		background: green;
	}
}

@media screen, print {
	body {
		background: green;
	}
}

a {
	color: red;
}

a {
	color: red;
}

a {
	color: red;
}

a {
	color: red;
}

a {
	color: red;
}

a {
	color: red;
}

a {
	color: red;
}

a {
	color: red;
}

a {
	color: red;
}

@media screen and (orientation:landscape) {
	a {
		color: red;
	}
}

@media SCREEN AND (ORIENTATION: LANDSCAPE) {
	a {
		color: red;
	}
}

@media (min-width: 100px) {
	a {
		color: red;
	}
}

.class {
	content: \\"test.css\\";
}

a {
	color: red;
}

@media screen and (orientation:landscape) {
	a {
		color: red;
	}
}

.class {
	content: \\"style.css\\";
	color: red;
}

.class {
	content: \\"style.css\\";
	color: red;
}

.class {
	content: \\"style.css\\";
	color: red;
}

.class {
	content: \\"style.css\\";
	color: red;
}

.class {
	content: \\"style7.css\\";
}

.class {
	content: \\"style7.css\\";
}

.class {
	content: \\"test test.css\\";
}

.class {
	content: \\"test test.css\\";
}

.class {
	content: \\"test test.css\\";
}

.class {
	content: \\"test test.css\\";
}

.class {
	content: \\"test test.css\\";
}

.class {
	content: \\"test test.css\\";
}

.class {
	content: \\"test.css\\";
}

.class {
	content: \\"test.css\\";
}

.class {
	content: \\"test.css\\";
}

.class {
	content: \\"test.css\\";
}

.class {
	content: \\"test test.css\\";
}

.class {
	content: \\"test test.css\\";
}

.class {
	content: \\"test test.css\\";
}

.class {
	content: \\"test test.css\\";
}

.class {
	content: \\"test test.css\\";
}

.class {
	content: \\"test test.css\\";
}

.class {
	content: \\"style6.css\\";
}

.class {
	content: \\"test.css\\";
}
.using-loader { color: red; }
.class {
	content: \\"style4.css\\";
}

.class {
	content: \\"style4.css\\";
}

.class {
	content: \\"style4.css\\";
}

@supports (display: flex) {
	.class {
		content: \\"style4.css\\";
	}
}

@supports (display: flex) {
	@media screen and (orientation:landscape) {
		.class {
			content: \\"style4.css\\";
		}
	}
}

.class {
	content: \\"style4.css\\";
}

.class {
	content: \\"style4.css\\";
}

.class {
	content: \\"style4.css\\";
}

@media screen and (orientation: landscape) {
	.class {
		content: \\"test.css\\";
	}
	.using-loader { color: red; }}

a {
  color: red;
}
@media screen and (orientation:landscape) {
	a {
	  color: blue;
	}}

a {
  color: red;
}
.class {
	content: \\"style5.css\\";
}

.class {
	content: \\"style5.css\\";
}

@supports (unknown) {
	.class {
		content: \\"style5.css\\";
	}
}

@supports (display: flex) {
	.class {
		content: \\"style5.css\\";
	}
}

@supports (display: flex !important) {
	.class {
		content: \\"style5.css\\";
	}
}

@supports (display: flex) {
	@media screen and (min-width: 400px) {
		.class {
			content: \\"style5.css\\";
		}
	}
}

@supports (selector(a b)) {
	.class {
		content: \\"style5.css\\";
	}
}

@supports (display: flex) {
	.class {
		content: \\"style5.css\\";
	}
}

@layer {
	.class {
		content: \\"layer.css\\";
	}
}

@layer default {
	.class {
		content: \\"layer.css\\";
	}
}

@layer default {
	@supports (display: flex) {
		@media screen and (min-width: 400px) {
			.class {
				content: \\"layer.css\\";
			}
		}
	}
}

@layer {
	@supports (display: flex) {
		@media screen and (min-width: 400px) {
			.class {
				content: \\"layer.css\\";
			}
		}
	}
}

@layer {
	@supports (display: flex) {
		@media screen and (min-width: 400px) {
			.class {
				content: \\"layer.css\\";
			}
		}
	}
}

@layer {
	.class {
		content: \\"layer.css\\";
	}
}

@layer foo.bar.baz {
	.class {
		content: \\"layer.css\\";
	}
}

@layer {
	.class {
		content: \\"layer.css\\";
	}
}

@layer default {
	@supports (display: flex) {
		@media screen and (min-width:400px) {
			.class {
				content: \\"style6.css\\";
			}
		}
	}
}

@layer default {
	@supports (display: flex) {
		@media screen and (min-width:400px) {
			.class {
				content: \\"style6.css\\";
			}
		}
	}
}

@supports (display: flex) {
	@media screen and (min-width:400px) {
		.class {
			content: \\"style6.css\\";
		}
	}
}

@media screen and (min-width:400px) {
	.class {
		content: \\"style6.css\\";
	}
}

@media screen and (min-width:400px) {
	.class {
		content: \\"style6.css\\";
	}
}

@media screen and (min-width:400px) {
	.class {
		content: \\"style6.css\\";
	}
}

@layer default {
	@supports (display     :     flex) {
		@media screen     and     (     min-width     :     400px     ) {
			.class {
				content: \\"style6.css\\";
			}
		}
	}
}

@layer DEFAULT {
	@supports (DISPLAY: FLEX) {
		@media SCREEN AND (MIN-WIDTH: 400PX) {
			.class {
				content: \\"style6.css\\";
			}
		}
	}
}

@layer {
	@supports (DISPLAY: FLEX) {
		@media SCREEN AND (MIN-WIDTH: 400PX) {
			.class {
				content: \\"style6.css\\";
			}
		}
	}
}

@layer /* Comment */default/* Comment */ {
	@supports (/* Comment */display/* Comment */:/* Comment */ flex/* Comment */) {
		@media /* Comment */ screen/* Comment */ and/* Comment */ (/* Comment */min-width/* Comment */: /* Comment */400px/* Comment */) {
			.class {
				content: \\"style6.css\\";
			}
		}
	}
}

.class {
	content: \\"style6.css\\";
}

.class {
	content: \\"style6.css\\";
}

.class {
	content: \\"style6.css\\";
}

.class {
	content: \\"style6.css\\";
}

.class {
	content: \\"style6.css\\";
}

.class {
	content: \\"style6.css\\";
}

@media /* Comment */ print and (orientation:landscape) {
	.class {
		content: \\"style6.css\\";
	}
}

@media /* Comment */print and (orientation:landscape)/* Comment */ {
	.class {
		content: \\"style6.css\\";
	}
}

@media /* Comment */ print and (orientation:landscape) {
	.class {
		content: \\"style6.css\\";
	}
}

@media screen and (min-width: 400px) {
	.class {
		content: \\"style8.css\\";
	}
}

@media (prefers-color-scheme: dark) {
	.class {
		content: \\"style8.css\\";
	}
}

@supports (display: flex) {
	.class {
		content: \\"style8.css\\";
	}
}

@supports (((display: flex))) {
	.class {
		content: \\"style8.css\\";
	}
}

@supports (((display: inline-grid))) {
	@media screen and (((min-width: 400px))) {
		.class {
			content: \\"style8.css\\";
		}
	}
}

@supports (display: grid) {
	.class {
		content: \\"style8.css\\";
	}
}

@supports (display: flex) {
	@media screen and (min-width: 400px) {
		.class {
			content: \\"style8.css\\";
		}
	}
}

@layer framework {
	.class {
		content: \\"style8.css\\";
	}
}

@layer default {
	.class {
		content: \\"style8.css\\";
	}
}

@layer base {
	.class {
		content: \\"style8.css\\";
	}
}

@layer default {
	@supports (display: flex) {
		.class {
			content: \\"style8.css\\";
		}
	}
}

@layer default {
	@supports (display: flex) {
		@media screen and (min-width: 400px) {
			.class {
				content: \\"style8.css\\";
			}
		}
	}
}

@layer {
	a {
		color: red;
	}
}

@media unknown(default) unknown(display: flex) unknown {
	.class {
		content: \\"style9.css\\";
	}
}

@media unknown(default) {
	.class {
		content: \\"style9.css\\";
	}
}

.style11 {
	color: red;
}

.style12 {
	color: red;
}

.style10 {
	color: red;
}

@media screen and (min-width: 400px) {
	@media screen and (max-width: 500px) {
		@media screen and (orientation: portrait) {
			.class {
				deep-deep-nested: 1;
			}
		}
	}
}

@media screen and (min-width: 400px) {
	@media screen and (max-width: 500px) {
		.class {
			deep-nested: 1;
		}
	}
}

@media screen and (min-width: 400px) {
	.class {
		nested: 1;
	}
}

@supports (display: flex) {
	@supports (display: grid) {
		@supports (display: table) {
			.class {
				deep-deep-nested: 1;
			}
		}
	}
}

@supports (display: flex) {
	@supports (display: grid) {
		.class {
			deep-nested: 1;
		}
	}
}

@supports (display: flex) {
	.class {
		nested: 1;
	}
}

@layer foo {
	@layer bar {
		@layer baz {
			.class {
				deep-deep-nested: 1;
			}
		}
	}
}

@layer foo {
	@layer bar {
		.class {
			deep-nested: 1;
		}
	}
}

@layer foo {
	.class {
		nested: 1;
	}
}

@layer foo {
	@supports (display: flex) {
		@media screen and (min-width: 400px) {
			@layer bar {
				@supports (display: grid) {
					@media screen and (min-width: 500px) {
						@layer baz {
							@supports (display: table) {
								@media screen and (min-width: 600px) {
									.class {
										deep-deep-nested: 1;
									}
								}
							}
						}
					}
				}
			}
		}
	}
}

@layer foo {
	@supports (display: flex) {
		@media screen and (min-width: 400px) {
			@layer bar {
				@supports (display: grid) {
					@media screen and (min-width: 500px) {
						.class {
							deep-nested: 1;
						}
					}
				}
			}
		}
	}
}

@layer foo {
	@supports (display: flex) {
		@media screen and (min-width: 400px) {
			.class {
				nested: 1;
			}
		}
	}
}

@media screen and (min-width: 400px) {
	@supports (display: flex) {
		@layer bar {
			.class {
				deep-deep-nested: 1;
			}
		}
	}
}

@media screen and (min-width: 400px) {
	@supports (display: flex) {
		.class {
			deep-nested: 1;
		}
	}
}

@media screen and (min-width: 400px) {
	.class {
		nested: 1;
	}
}

@layer {
	@layer {
		@layer {
			.class {
				deep-deep-nested: 1;
			}
		}
	}
}

@layer {
	@layer {
		.class {
			deep-nested: 1;
		}
	}
}

@layer {
	@layer base {
		@layer baz {
			.class {
				deep-deep-nested: 1;
			}
		}
	}
}

@layer {
	@layer base {
		.class {
			deep-nested: 1;
		}
	}
}

@layer {
	.class {
		deep-nested: 1;
	}
}

@media screen and (orientation: portrait) {
	.class {
		deep-deep-nested: 1;
	}
}

@media screen and (orientation: portrait) {
	@supports (display: flex) {
		.class {
			content: \\"style8.css\\";
		}
	}
}

@media screen and (orientation: portrait) {
	.class {
		duplicate-nested: true;
	}
}

@supports (display: flex) {
	@media screen and (orientation: portrait) {
		@layer {
			@layer {
				.class {
					deep-deep-nested: 1;
				}
			}
		}
	}
}

@supports (display: flex) {
	@media screen and (orientation: portrait) {
		@layer {
			.class {
				deep-nested: 1;
			}
		}
	}
}

@supports (display: flex) {
	@media screen and (orientation: portrait) {
		@layer base {
			@layer baz {
				.class {
					deep-deep-nested: 1;
				}
			}
		}
	}
}

@supports (display: flex) {
	@media screen and (orientation: portrait) {
		@layer base {
			.class {
				deep-nested: 1;
			}
		}
	}
}

@supports (display: flex) {
	@media screen and (orientation: portrait) {
		.class {
			deep-nested: 1;
		}
	}
}

@layer super.foo {
	@supports (display: flex) {
		@media screen and (min-width: 400px) {
			@layer bar {
				@supports (display: grid) {
					@media screen and (min-width: 500px) {
						@layer baz {
							@supports (display: table) {
								@media screen and (min-width: 600px) {
									.class {
										deep-deep-nested: 1;
									}
								}
							}
						}
					}
				}
			}
		}
	}
}

@layer super.foo {
	@supports (display: flex) {
		@media screen and (min-width: 400px) {
			@layer bar {
				@supports (display: grid) {
					@media screen and (min-width: 500px) {
						.class {
							deep-nested: 1;
						}
					}
				}
			}
		}
	}
}

@layer super.foo {
	@supports (display: flex) {
		@media screen and (min-width: 400px) {
			.class {
				nested: 1;
			}
		}
	}
}

@supports (unknown: layer(super.foo)) {
	@media screen and (min-width: 400px) {
		a {
			color: red;
		}
	}
}

@supports (url: url(\\"./unknown.css\\")) {
	@media screen and (min-width: 400px) {
		a {
			color: red;
		}
	}
}

@supports (url: url(./unknown.css)) {
	@media screen and (min-width: 400px) {
		a {
			color: red;
		}
	}
}

@layer super.foo {
	@supports (display: flex) {
		@media unknown(\\"foo\\") screen and (min-width: 400px) {
			a {
				color: red;
			}
		}
	}
}

@layer super.foo {
	@supports (display: url(\\"./unknown.css\\")) {
		@media unknown(foo) screen and (min-width: 400px) {
			a {
				color: red;
			}
		}
	}
}

@layer super.foo {
	@supports (display: url(./unknown.css)) {
		@media \\"foo\\" screen and (min-width: 400px) {
			a {
				color: red;
			}
		}
	}
}

@media \\"string\\" {
	a {
		color: red;
	}
}

a {
	color: red;
}

@media url(./style2.css?multiple=2) {
	a {
		color: red;
	}
}

a {
	color: red;
}

a {
	color: red;
}

/* Has the same URL */
/* anonymous */
/* All unknown parse as media for compatibility */
/* Inside support */

/** Possible syntax in future */

/** Unknown */

@import-normalize;

/** Warnings */

@import nourl(test.css);
@import ;
@import foo-bar;
@import layer(super.foo) \\"./style2.css?warning=1\\" supports(display: flex) screen and (min-width: 400px);
@import layer(super.foo) supports(display: flex) \\"./style2.css?warning=2\\" screen and (min-width: 400px);
@import layer(super.foo) supports(display: flex) screen and (min-width: 400px) \\"./style2.css?warning=3\\";
@import layer(super.foo) url(\\"./style2.css?warning=4\\") supports(display: flex) screen and (min-width: 400px);
@import layer(super.foo) supports(display: flex) url(\\"./style2.css?warning=5\\") screen and (min-width: 400px);
@import layer(super.foo) supports(display: flex) screen and (min-width: 400px) url(\\"./style2.css?warning=6\\");
@import url(\\"/style2.css?warning=6\\") supports(display: flex) layer(super.foo) screen and (min-width: 400px);
@namespace url(http://www.w3.org/1999/xhtml);
@import supports(background: url(\\"./img.png\\"));
@import supports(background: url(\\"./img.png\\")) screen and (min-width: 400px);
@import layer(test) supports(background: url(\\"./img.png\\")) screen and (min-width: 400px);
@import screen and (min-width: 400px);

body {
	background: red;
}

head{--webpack-main:https\\\\:\\\\/\\\\/test\\\\.cases\\\\/path\\\\/\\\\.\\\\.\\\\/\\\\.\\\\.\\\\/\\\\.\\\\.\\\\/\\\\.\\\\.\\\\/configCases\\\\/css\\\\/css-import\\\\/external\\\\.css,\\\\/\\\\/example\\\\.com\\\\/style\\\\.css,https\\\\:\\\\/\\\\/fonts\\\\.googleapis\\\\.com\\\\/css\\\\?family\\\\=Roboto,https\\\\:\\\\/\\\\/fonts\\\\.googleapis\\\\.com\\\\/css\\\\?family\\\\=Noto\\\\+Sans\\\\+TC,https\\\\:\\\\/\\\\/fonts\\\\.googleapis\\\\.com\\\\/css\\\\?family\\\\=Noto\\\\+Sans\\\\+TC\\\\|Roboto,https\\\\:\\\\/\\\\/test\\\\.cases\\\\/path\\\\/\\\\.\\\\.\\\\/\\\\.\\\\.\\\\/\\\\.\\\\.\\\\/\\\\.\\\\.\\\\/configCases\\\\/css\\\\/css-import\\\\/external1\\\\.css,https\\\\:\\\\/\\\\/test\\\\.cases\\\\/path\\\\/\\\\.\\\\.\\\\/\\\\.\\\\.\\\\/\\\\.\\\\.\\\\/\\\\.\\\\.\\\\/configCases\\\\/css\\\\/css-import\\\\/external2\\\\.css,\\\\.\\\\/node_modules\\\\/style-library\\\\/styles\\\\.css,\\\\.\\\\/node_modules\\\\/main-field\\\\/styles\\\\.css,\\\\.\\\\/node_modules\\\\/package-with-exports\\\\/style\\\\.css,\\\\.\\\\/extensions-imported\\\\.mycss,\\\\.\\\\/file\\\\.less,\\\\.\\\\/with-less-import\\\\.css,\\\\.\\\\/prefer-relative\\\\.css,\\\\.\\\\/node_modules\\\\/condition-names-style\\\\/default\\\\.css,\\\\.\\\\/node_modules\\\\/condition-names-style-mode\\\\/mode\\\\.css,\\\\.\\\\/node_modules\\\\/condition-names-subpath\\\\/dist\\\\/custom\\\\.css,\\\\.\\\\/node_modules\\\\/condition-names-subpath-extra\\\\/dist\\\\/custom\\\\.css,\\\\.\\\\/node_modules\\\\/condition-names-style-less\\\\/default\\\\.less,\\\\.\\\\/node_modules\\\\/condition-names-custom-name\\\\/custom-name\\\\.css,\\\\.\\\\/node_modules\\\\/style-and-main-library\\\\/styles\\\\.css,\\\\.\\\\/node_modules\\\\/condition-names-webpack\\\\/webpack\\\\.css,\\\\.\\\\/node_modules\\\\/condition-names-style-nested\\\\/default\\\\.css,\\\\.\\\\/style-import\\\\.css,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=1,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=2,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=3,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=4,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=5,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=6,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=7,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=8,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=9,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=10,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=11,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=12,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=13,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=14,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=15,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=16,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=17,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=18,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=19,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=20,\\\\.\\\\/print\\\\.css\\\\?foo\\\\=21,\\\\.\\\\/imported\\\\.css\\\\?1832,\\\\.\\\\/imported\\\\.css\\\\?e0bb,\\\\.\\\\/imported\\\\.css\\\\?769a,\\\\.\\\\/imported\\\\.css\\\\?d4d6,\\\\.\\\\/style2\\\\.css\\\\?foo\\\\=1,\\\\.\\\\/style2\\\\.css\\\\?foo\\\\=2,\\\\.\\\\/style2\\\\.css\\\\?foo\\\\=3,\\\\.\\\\/style2\\\\.css\\\\?foo\\\\=4,\\\\.\\\\/style2\\\\.css\\\\?foo\\\\=5,\\\\.\\\\/style2\\\\.css\\\\?foo\\\\=6,\\\\.\\\\/style2\\\\.css\\\\?foo\\\\=7,\\\\.\\\\/style2\\\\.css\\\\?foo\\\\=8,\\\\.\\\\/style2\\\\.css\\\\?foo\\\\=9,\\\\.\\\\/style2\\\\.css\\\\?cf0d,\\\\.\\\\/style2\\\\.css\\\\?dfe6,\\\\.\\\\/style2\\\\.css\\\\?7d49,\\\\.\\\\/test\\\\.css\\\\?foo\\\\=1\\\\&bar\\\\=1,\\\\.\\\\/style2\\\\.css\\\\?foo\\\\=1\\\\&bar\\\\=1\\\\#hash\\\\?63d2,\\\\.\\\\/style2\\\\.css\\\\?foo\\\\=1\\\\&bar\\\\=1\\\\#hash\\\\?e75b,\\\\.\\\\/style3\\\\.css\\\\?bar\\\\=1,\\\\.\\\\/style3\\\\.css\\\\?bar\\\\=2,\\\\.\\\\/style3\\\\.css\\\\?bar\\\\=3,\\\\.\\\\/style3\\\\.css\\\\?\\\\=bar4,\\\\.\\\\/styl\\\\'le7\\\\.css,\\\\.\\\\/styl\\\\'le7\\\\.css\\\\?foo\\\\=1,\\\\.\\\\/test\\\\ test\\\\.css,\\\\.\\\\/test\\\\ test\\\\.css\\\\?foo\\\\=1,\\\\.\\\\/test\\\\ test\\\\.css\\\\?foo\\\\=2,\\\\.\\\\/test\\\\ test\\\\.css\\\\?foo\\\\=3,\\\\.\\\\/test\\\\ test\\\\.css\\\\?foo\\\\=4,\\\\.\\\\/test\\\\ test\\\\.css\\\\?foo\\\\=5,\\\\.\\\\/test\\\\.css,\\\\.\\\\/test\\\\.css\\\\?foo\\\\=1,\\\\.\\\\/test\\\\.css\\\\?foo\\\\=2,\\\\.\\\\/test\\\\.css\\\\?foo\\\\=3,\\\\.\\\\/test\\\\ test\\\\.css\\\\?foo\\\\=6,\\\\.\\\\/test\\\\ test\\\\.css\\\\?foo\\\\=7,\\\\.\\\\/test\\\\ test\\\\.css\\\\?foo\\\\=8,\\\\.\\\\/test\\\\ test\\\\.css\\\\?foo\\\\=9,\\\\.\\\\/test\\\\ test\\\\.css\\\\?fpp\\\\=10,\\\\.\\\\/test\\\\ test\\\\.css\\\\?foo\\\\=11,\\\\.\\\\/style6\\\\.css\\\\?foo\\\\=bazz,\\\\.\\\\/string-loader\\\\.js\\\\?esModule\\\\=false\\\\!\\\\.\\\\/test\\\\.css\\\\?10e0,\\\\.\\\\/style4\\\\.css\\\\?foo\\\\=bar,\\\\.\\\\/style4\\\\.css\\\\?foo\\\\=bar\\\\#hash,\\\\.\\\\/style4\\\\.css\\\\?\\\\#hash,\\\\.\\\\/style4\\\\.css\\\\?foo\\\\=1,\\\\.\\\\/style4\\\\.css\\\\?foo\\\\=2,\\\\.\\\\/style4\\\\.css\\\\?foo\\\\=3,\\\\.\\\\/style4\\\\.css\\\\?foo\\\\=4,\\\\.\\\\/style4\\\\.css\\\\?foo\\\\=5,\\\\.\\\\/string-loader\\\\.js\\\\?esModule\\\\=false\\\\!\\\\.\\\\/test\\\\.css\\\\?6393,data\\\\:text\\\\/css\\\\;charset\\\\=utf-8\\\\,a\\\\%20\\\\%7B\\\\%0D\\\\%0A\\\\%20\\\\%20color\\\\%3A\\\\%20red\\\\%3B\\\\%0D\\\\%0A\\\\%7D,data\\\\:text\\\\/css\\\\;charset\\\\=utf-8\\\\,a\\\\%20\\\\%7B\\\\%0D\\\\%0A\\\\%20\\\\%20color\\\\%3A\\\\%20blue\\\\%3B\\\\%0D\\\\%0A\\\\%7D,data\\\\:text\\\\/css\\\\;charset\\\\=utf-8\\\\;base64\\\\,YSB7DQogIGNvbG9yOiByZWQ7DQp9,\\\\.\\\\/style5\\\\.css\\\\?foo\\\\=1,\\\\.\\\\/style5\\\\.css\\\\?foo\\\\=2,\\\\.\\\\/style5\\\\.css\\\\?foo\\\\=3,\\\\.\\\\/style5\\\\.css\\\\?foo\\\\=4,\\\\.\\\\/style5\\\\.css\\\\?foo\\\\=5,\\\\.\\\\/style5\\\\.css\\\\?foo\\\\=6,\\\\.\\\\/style5\\\\.css\\\\?foo\\\\=7,\\\\.\\\\/style5\\\\.css\\\\?foo\\\\=8,\\\\.\\\\/layer\\\\.css\\\\?foo\\\\=1,\\\\.\\\\/layer\\\\.css\\\\?foo\\\\=2,\\\\.\\\\/layer\\\\.css\\\\?foo\\\\=3\\\\?1ab5,\\\\.\\\\/layer\\\\.css\\\\?foo\\\\=3\\\\?19e1,\\\\.\\\\/layer\\\\.css\\\\?foo\\\\=4,\\\\.\\\\/layer\\\\.css\\\\?foo\\\\=5,\\\\.\\\\/layer\\\\.css\\\\?foo\\\\=6,\\\\.\\\\/layer\\\\.css\\\\?foo\\\\=7,\\\\.\\\\/style6\\\\.css,\\\\.\\\\/style6\\\\.css\\\\?foo\\\\=1,\\\\.\\\\/style6\\\\.css\\\\?foo\\\\=2,\\\\.\\\\/style6\\\\.css\\\\?foo\\\\=3,\\\\.\\\\/style6\\\\.css\\\\?foo\\\\=4,\\\\.\\\\/style6\\\\.css\\\\?foo\\\\=5,\\\\.\\\\/style6\\\\.css\\\\?foo\\\\=6,\\\\.\\\\/style6\\\\.css\\\\?foo\\\\=7,\\\\.\\\\/style6\\\\.css\\\\?foo\\\\=8,\\\\.\\\\/style6\\\\.css\\\\?foo\\\\=9,\\\\.\\\\/style6\\\\.css\\\\?foo\\\\=10,\\\\.\\\\/style6\\\\.css\\\\?foo\\\\=11,\\\\.\\\\/style6\\\\.css\\\\?foo\\\\=12,\\\\.\\\\/style6\\\\.css\\\\?foo\\\\=13,\\\\.\\\\/style6\\\\.css\\\\?foo\\\\=14,\\\\.\\\\/style6\\\\.css\\\\?foo\\\\=15,\\\\.\\\\/style6\\\\.css\\\\?foo\\\\=16,\\\\.\\\\/style6\\\\.css\\\\?foo\\\\=17,\\\\.\\\\/style6\\\\.css\\\\?foo\\\\=18,\\\\.\\\\/style8\\\\.css\\\\?b84b,\\\\.\\\\/style8\\\\.css\\\\?5dc5,\\\\.\\\\/style8\\\\.css\\\\?71be,\\\\.\\\\/style8\\\\.css\\\\?386a,\\\\.\\\\/style8\\\\.css\\\\?568a,\\\\.\\\\/style8\\\\.css\\\\?b9af,\\\\.\\\\/style8\\\\.css\\\\?7300,\\\\.\\\\/style8\\\\.css\\\\?6efd,\\\\.\\\\/style8\\\\.css\\\\?288c,\\\\.\\\\/style8\\\\.css\\\\?1094,\\\\.\\\\/style8\\\\.css\\\\?38bf,\\\\.\\\\/style8\\\\.css\\\\?d697,\\\\.\\\\/style2\\\\.css\\\\?0aae,\\\\.\\\\/style9\\\\.css\\\\?8e91,\\\\.\\\\/style9\\\\.css\\\\?71b5,\\\\.\\\\/style11\\\\.css,\\\\.\\\\/style12\\\\.css,\\\\.\\\\/style10\\\\.css,\\\\.\\\\/media-deep-deep-nested\\\\.css\\\\?ef21,\\\\.\\\\/media-deep-nested\\\\.css,\\\\.\\\\/media-nested\\\\.css,\\\\.\\\\/supports-deep-deep-nested\\\\.css,\\\\.\\\\/supports-deep-nested\\\\.css,\\\\.\\\\/supports-nested\\\\.css,\\\\.\\\\/layer-deep-deep-nested\\\\.css\\\\?5660,\\\\.\\\\/layer-deep-nested\\\\.css\\\\?9fd1,\\\\.\\\\/layer-nested\\\\.css,\\\\.\\\\/all-deep-deep-nested\\\\.css\\\\?af0a,\\\\.\\\\/all-deep-nested\\\\.css\\\\?4e94,\\\\.\\\\/all-nested\\\\.css\\\\?c0fa,\\\\.\\\\/mixed-deep-deep-nested\\\\.css,\\\\.\\\\/mixed-deep-nested\\\\.css,\\\\.\\\\/mixed-nested\\\\.css,\\\\.\\\\/anonymous-deep-deep-nested\\\\.css\\\\?1f16,\\\\.\\\\/anonymous-deep-nested\\\\.css\\\\?c0a8,\\\\.\\\\/layer-deep-deep-nested\\\\.css\\\\?4bce,\\\\.\\\\/layer-deep-nested\\\\.css\\\\?a03f,\\\\.\\\\/anonymous-nested\\\\.css\\\\?390d,\\\\.\\\\/media-deep-deep-nested\\\\.css\\\\?7047,\\\\.\\\\/style8\\\\.css\\\\?8af1,\\\\.\\\\/duplicate-nested\\\\.css,\\\\.\\\\/anonymous-deep-deep-nested\\\\.css\\\\?9cec,\\\\.\\\\/anonymous-deep-nested\\\\.css\\\\?dea4,\\\\.\\\\/layer-deep-deep-nested\\\\.css\\\\?4897,\\\\.\\\\/layer-deep-nested\\\\.css\\\\?4579,\\\\.\\\\/anonymous-nested\\\\.css\\\\?df05,\\\\.\\\\/all-deep-deep-nested\\\\.css\\\\?55ab,\\\\.\\\\/all-deep-nested\\\\.css\\\\?1513,\\\\.\\\\/all-nested\\\\.css\\\\?ccc9,\\\\.\\\\/style2\\\\.css\\\\?warning\\\\=6,\\\\.\\\\/style2\\\\.css\\\\?warning\\\\=7,\\\\.\\\\/style2\\\\.css\\\\?warning\\\\=8,\\\\.\\\\/style2\\\\.css\\\\?foo\\\\=unknown,\\\\.\\\\/style2\\\\.css\\\\?foo\\\\=unknown1,\\\\.\\\\/style2\\\\.css\\\\?foo\\\\=unknown2,\\\\.\\\\/style2\\\\.css\\\\?unknown3,\\\\.\\\\/style2\\\\.css\\\\?after-namespace,\\\\.\\\\/style2\\\\.css\\\\?multiple\\\\=1,\\\\.\\\\/style2\\\\.css\\\\?multiple\\\\=3,\\\\.\\\\/style2\\\\.css\\\\?strange\\\\=3,\\\\.\\\\/style\\\\.css;}",
]
`;

exports[`ConfigCacheTestCases css css-modules exported tests should allow to create css modules 1`] = `
".\\\\.\\\\/style\\\\.module\\\\.css-class {
	color: red;
}

.\\\\.\\\\/style\\\\.module\\\\.css-local1,
.\\\\.\\\\/style\\\\.module\\\\.css-local2 .global,
.\\\\.\\\\/style\\\\.module\\\\.css-local3 {
	color: green;
}

.global .\\\\.\\\\/style\\\\.module\\\\.css-local4 {
	color: yellow;
}

.\\\\.\\\\/style\\\\.module\\\\.css-local5.global.\\\\.\\\\/style\\\\.module\\\\.css-local6 {
	color: blue;
}

.\\\\.\\\\/style\\\\.module\\\\.css-local7 div:not(.\\\\.\\\\/style\\\\.module\\\\.css-disabled, .\\\\.\\\\/style\\\\.module\\\\.css-mButtonDisabled, .\\\\.\\\\/style\\\\.module\\\\.css-tipOnly) {
    pointer-events: initial !important;
}

.\\\\.\\\\/style\\\\.module\\\\.css-local8 :is(div.\\\\.\\\\/style\\\\.module\\\\.css-parent1.\\\\.\\\\/style\\\\.module\\\\.css-child1.\\\\.\\\\/style\\\\.module\\\\.css-vertical-tiny,
    div.\\\\.\\\\/style\\\\.module\\\\.css-parent1.\\\\.\\\\/style\\\\.module\\\\.css-child1.\\\\.\\\\/style\\\\.module\\\\.css-vertical-small,
    div.\\\\.\\\\/style\\\\.module\\\\.css-otherDiv.\\\\.\\\\/style\\\\.module\\\\.css-horizontal-tiny,
    div.\\\\.\\\\/style\\\\.module\\\\.css-otherDiv.\\\\.\\\\/style\\\\.module\\\\.css-horizontal-small div.\\\\.\\\\/style\\\\.module\\\\.css-description) {
  max-height: 0;
  margin: 0;
  overflow: hidden;
}

.\\\\.\\\\/style\\\\.module\\\\.css-local9 :matches(div.\\\\.\\\\/style\\\\.module\\\\.css-parent1.\\\\.\\\\/style\\\\.module\\\\.css-child1.\\\\.\\\\/style\\\\.module\\\\.css-vertical-tiny,
    div.\\\\.\\\\/style\\\\.module\\\\.css-parent1.\\\\.\\\\/style\\\\.module\\\\.css-child1.\\\\.\\\\/style\\\\.module\\\\.css-vertical-small,
    div.\\\\.\\\\/style\\\\.module\\\\.css-otherDiv.\\\\.\\\\/style\\\\.module\\\\.css-horizontal-tiny,
    div.\\\\.\\\\/style\\\\.module\\\\.css-otherDiv.\\\\.\\\\/style\\\\.module\\\\.css-horizontal-small div.\\\\.\\\\/style\\\\.module\\\\.css-description) {
  max-height: 0;
  margin: 0;
  overflow: hidden;
}

.\\\\.\\\\/style\\\\.module\\\\.css-local10 :where(div.\\\\.\\\\/style\\\\.module\\\\.css-parent1.\\\\.\\\\/style\\\\.module\\\\.css-child1.\\\\.\\\\/style\\\\.module\\\\.css-vertical-tiny,
    div.\\\\.\\\\/style\\\\.module\\\\.css-parent1.\\\\.\\\\/style\\\\.module\\\\.css-child1.\\\\.\\\\/style\\\\.module\\\\.css-vertical-small,
    div.\\\\.\\\\/style\\\\.module\\\\.css-otherDiv.\\\\.\\\\/style\\\\.module\\\\.css-horizontal-tiny,
    div.\\\\.\\\\/style\\\\.module\\\\.css-otherDiv.\\\\.\\\\/style\\\\.module\\\\.css-horizontal-small div.\\\\.\\\\/style\\\\.module\\\\.css-description) {
  max-height: 0;
  margin: 0;
  overflow: hidden;
}

.\\\\.\\\\/style\\\\.module\\\\.css-local11 div:has(.\\\\.\\\\/style\\\\.module\\\\.css-disabled, .\\\\.\\\\/style\\\\.module\\\\.css-mButtonDisabled, .\\\\.\\\\/style\\\\.module\\\\.css-tipOnly) {
    pointer-events: initial !important;
}

.\\\\.\\\\/style\\\\.module\\\\.css-local12 div:current(p, span) {
	background-color: yellow;
}

.\\\\.\\\\/style\\\\.module\\\\.css-local13 div:past(p, span) {
	display: none;
}

.\\\\.\\\\/style\\\\.module\\\\.css-local14 div:future(p, span) {
	background-color: yellow;
}

.\\\\.\\\\/style\\\\.module\\\\.css-local15 div:-moz-any(ol, ul, menu, dir) {
	list-style-type: square;
}

.\\\\.\\\\/style\\\\.module\\\\.css-local16 li:-webkit-any(:first-child, :last-child) {
	background-color: aquamarine;
}

.\\\\.\\\\/style\\\\.module\\\\.css-local9 :matches(div.\\\\.\\\\/style\\\\.module\\\\.css-parent1.\\\\.\\\\/style\\\\.module\\\\.css-child1.\\\\.\\\\/style\\\\.module\\\\.css-vertical-tiny,
    div.\\\\.\\\\/style\\\\.module\\\\.css-parent1.\\\\.\\\\/style\\\\.module\\\\.css-child1.\\\\.\\\\/style\\\\.module\\\\.css-vertical-small,
    div.\\\\.\\\\/style\\\\.module\\\\.css-otherDiv.\\\\.\\\\/style\\\\.module\\\\.css-horizontal-tiny,
    div.\\\\.\\\\/style\\\\.module\\\\.css-otherDiv.\\\\.\\\\/style\\\\.module\\\\.css-horizontal-small div.\\\\.\\\\/style\\\\.module\\\\.css-description) {
	max-height: 0;
	margin: 0;
	overflow: hidden;
}

.\\\\.\\\\/style\\\\.module\\\\.css-nested1.nested2.\\\\.\\\\/style\\\\.module\\\\.css-nested3 {
	color: pink;
}

#\\\\.\\\\/style\\\\.module\\\\.css-ident {
	color: purple;
}

@keyframes \\\\.\\\\/style\\\\.module\\\\.css-localkeyframes{
	0% {
		left: var(--\\\\.\\\\/style\\\\.module\\\\.css-pos1x);
		top: var(--\\\\.\\\\/style\\\\.module\\\\.css-pos1y);
		color: var(--theme-color1);
	}
	100% {
		left: var(--\\\\.\\\\/style\\\\.module\\\\.css-pos2x);
		top: var(--\\\\.\\\\/style\\\\.module\\\\.css-pos2y);
		color: var(--theme-color2);
	}
}

@keyframes \\\\.\\\\/style\\\\.module\\\\.css-localkeyframes2{
	0% {
		left: 0;
	}
	100% {
		left: 100px;
	}
}

.\\\\.\\\\/style\\\\.module\\\\.css-animation {
	animation-name: \\\\.\\\\/style\\\\.module\\\\.css-localkeyframes;
	animation: 3s ease-in 1s 2 reverse both paused \\\\.\\\\/style\\\\.module\\\\.css-localkeyframes, \\\\.\\\\/style\\\\.module\\\\.css-localkeyframes2;
	--\\\\.\\\\/style\\\\.module\\\\.css-pos1x: 0px;
	--\\\\.\\\\/style\\\\.module\\\\.css-pos1y: 0px;
	--\\\\.\\\\/style\\\\.module\\\\.css-pos2x: 10px;
	--\\\\.\\\\/style\\\\.module\\\\.css-pos2y: 20px;
}

/* .composed {
	composes: local1;
	composes: local2;
} */

.\\\\.\\\\/style\\\\.module\\\\.css-vars {
	color: var(--\\\\.\\\\/style\\\\.module\\\\.css-local-color);
	--\\\\.\\\\/style\\\\.module\\\\.css-local-color: red;
}

.\\\\.\\\\/style\\\\.module\\\\.css-globalVars {
	color: var(--global-color);
	--global-color: red;
}

@media (min-width: 1600px) {
	.\\\\.\\\\/style\\\\.module\\\\.css-wideScreenClass {
		color: var(--\\\\.\\\\/style\\\\.module\\\\.css-local-color);
		--\\\\.\\\\/style\\\\.module\\\\.css-local-color: green;
	}
}

@media screen and (max-width: 600px) {
	.\\\\.\\\\/style\\\\.module\\\\.css-narrowScreenClass {
		color: var(--\\\\.\\\\/style\\\\.module\\\\.css-local-color);
		--\\\\.\\\\/style\\\\.module\\\\.css-local-color: purple;
	}
}

@supports (display: grid) {
	.\\\\.\\\\/style\\\\.module\\\\.css-displayGridInSupports {
		display: grid;
	}
}

@supports not (display: grid) {
  .\\\\.\\\\/style\\\\.module\\\\.css-floatRightInNegativeSupports {
    float: right;
  }
}

@supports (display: flex) {
  @media screen and (min-width: 900px) {
    .\\\\.\\\\/style\\\\.module\\\\.css-displayFlexInMediaInSupports {
      display: flex;
    }
  }
}

@media screen and (min-width: 900px) {
	@supports (display: flex) {
    .\\\\.\\\\/style\\\\.module\\\\.css-displayFlexInSupportsInMedia {
      display: flex;
    }
  }
}

@MEDIA screen and (min-width: 900px) {
	@SUPPORTS (display: flex) {
		.\\\\.\\\\/style\\\\.module\\\\.css-displayFlexInSupportsInMediaUpperCase {
			display: flex;
		}
	}
}

.\\\\.\\\\/style\\\\.module\\\\.css-animationUpperCase {
	ANIMATION-NAME: \\\\.\\\\/style\\\\.module\\\\.css-localkeyframesUPPERCASE;
	ANIMATION: 3s ease-in 1s 2 reverse both paused \\\\.\\\\/style\\\\.module\\\\.css-localkeyframesUPPERCASE, \\\\.\\\\/style\\\\.module\\\\.css-localkeyframes2UPPPERCASE;
	--\\\\.\\\\/style\\\\.module\\\\.css-pos1x: 0px;
	--\\\\.\\\\/style\\\\.module\\\\.css-pos1y: 0px;
	--\\\\.\\\\/style\\\\.module\\\\.css-pos2x: 10px;
	--\\\\.\\\\/style\\\\.module\\\\.css-pos2y: 20px;
}

@KEYFRAMES \\\\.\\\\/style\\\\.module\\\\.css-localkeyframesUPPERCASE{
	0% {
		left: VAR(--\\\\.\\\\/style\\\\.module\\\\.css-pos1x);
		top: VAR(--\\\\.\\\\/style\\\\.module\\\\.css-pos1y);
		color: VAR(--theme-color1);
	}
	100% {
		left: VAR(--\\\\.\\\\/style\\\\.module\\\\.css-pos2x);
		top: VAR(--\\\\.\\\\/style\\\\.module\\\\.css-pos2y);
		color: VAR(--theme-color2);
	}
}

@KEYframes \\\\.\\\\/style\\\\.module\\\\.css-localkeyframes2UPPPERCASE{
	0% {
		left: 0;
	}
	100% {
		left: 100px;
	}
}

.globalUpperCase .\\\\.\\\\/style\\\\.module\\\\.css-localUpperCase {
	color: yellow;
}

.\\\\.\\\\/style\\\\.module\\\\.css-VARS {
	color: VAR(--\\\\.\\\\/style\\\\.module\\\\.css-LOCAL-COLOR);
	--\\\\.\\\\/style\\\\.module\\\\.css-LOCAL-COLOR: red;
}

.\\\\.\\\\/style\\\\.module\\\\.css-globalVarsUpperCase {
	COLOR: VAR(--GLOBAR-COLOR);
	--GLOBAR-COLOR: red;
}

@supports (top: env(safe-area-inset-top, 0)) {
	.\\\\.\\\\/style\\\\.module\\\\.css-inSupportScope {
		color: red;
	}
}

.\\\\.\\\\/style\\\\.module\\\\.css-a {
	animation: 3s \\\\.\\\\/style\\\\.module\\\\.css-animationName;
	-webkit-animation: 3s \\\\.\\\\/style\\\\.module\\\\.css-animationName;
}

.\\\\.\\\\/style\\\\.module\\\\.css-b {
	animation: \\\\.\\\\/style\\\\.module\\\\.css-animationName 3s;
	-webkit-animation: \\\\.\\\\/style\\\\.module\\\\.css-animationName 3s;
}

.\\\\.\\\\/style\\\\.module\\\\.css-c {
	animation-name: \\\\.\\\\/style\\\\.module\\\\.css-animationName;
	-webkit-animation-name: \\\\.\\\\/style\\\\.module\\\\.css-animationName;
}

.\\\\.\\\\/style\\\\.module\\\\.css-d {
	--\\\\.\\\\/style\\\\.module\\\\.css-animation-name: animationName;
}

@keyframes \\\\.\\\\/style\\\\.module\\\\.css-animationName{
	0% {
		background: white;
	}
	100% {
		background: red;
	}
}

@-webkit-keyframes \\\\.\\\\/style\\\\.module\\\\.css-animationName{
	0% {
		background: white;
	}
	100% {
		background: red;
	}
}

@-moz-keyframes \\\\.\\\\/style\\\\.module\\\\.css-mozAnimationName{
	0% {
		background: white;
	}
	100% {
		background: red;
	}
}

@counter-style thumbs {
	system: cyclic;
	symbols: \\"\\\\1F44D\\";
	suffix: \\" \\";
}

@font-feature-values Font One {
	@styleset {
		nice-style: 12;
	}
}

/* At-rule for \\"nice-style\\" in Font Two */
@font-feature-values Font Two {
	@styleset {
		nice-style: 4;
	}
}

@property --\\\\.\\\\/style\\\\.module\\\\.css-my-color{
	syntax: \\"<color>\\";
	inherits: false;
	initial-value: #\\\\.\\\\/style\\\\.module\\\\.css-c0ffee;
}

.\\\\.\\\\/style\\\\.module\\\\.css-class {
	color: var(--\\\\.\\\\/style\\\\.module\\\\.css-my-color);
}

@layer utilities {
	.\\\\.\\\\/style\\\\.module\\\\.css-padding-sm {
		padding: 0.5rem;
	}

	.\\\\.\\\\/style\\\\.module\\\\.css-padding-lg {
		padding: 0.8rem;
	}
}

.\\\\.\\\\/style\\\\.module\\\\.css-class {
	color: red;

	.\\\\.\\\\/style\\\\.module\\\\.css-nested-pure {
		color: red;
	}

	@media screen and (min-width: 200px) {
		color: blue;

		.\\\\.\\\\/style\\\\.module\\\\.css-nested-media {
			color: blue;
		}
	}

	@supports (display: flex) {
		display: flex;

		.\\\\.\\\\/style\\\\.module\\\\.css-nested-supports {
			display: flex;
		}
	}

	@layer foo {
		background: red;

		.\\\\.\\\\/style\\\\.module\\\\.css-nested-layer {
			background: red;
		}
	}

	@container foo {
		background: red;

		.\\\\.\\\\/style\\\\.module\\\\.css-nested-layer {
			background: red;
		}
	}
}

.\\\\.\\\\/style\\\\.module\\\\.css-not-selector-inside {
	color: #fff;
	opacity: 0.12;
	padding: .5px;
	unknown: :local(.test);
	unknown1: :local .test;
	unknown2: :global .test;
	unknown3: :global .test;
	unknown4: .foo, .bar, #bar;
}

@unknown :local .local :global .global {
	color: red;
}

@unknown :local(.local) :global(.global) {
	color: red;
}

.\\\\.\\\\/style\\\\.module\\\\.css-nested-var {
	.\\\\.\\\\/style\\\\.module\\\\.css-again {
		color: var(--\\\\.\\\\/style\\\\.module\\\\.css-local-color);
	}
}

.\\\\.\\\\/style\\\\.module\\\\.css-nested-with-local-pseudo {
	color: red;

	.\\\\.\\\\/style\\\\.module\\\\.css-local-nested {
		color: red;
	}

	.global-nested {
		color: red;
	}

	.\\\\.\\\\/style\\\\.module\\\\.css-local-nested {
		color: red;
	}

	.global-nested {
		color: red;
	}

	.\\\\.\\\\/style\\\\.module\\\\.css-local-nested, .global-nested-next {
		color: red;
	}

	.\\\\.\\\\/style\\\\.module\\\\.css-local-nested, .global-nested-next {
		color: red;
	}

	.foo, .\\\\.\\\\/style\\\\.module\\\\.css-bar {
		color: red;
	}
}

#\\\\.\\\\/style\\\\.module\\\\.css-id-foo {
	color: red;

	#\\\\.\\\\/style\\\\.module\\\\.css-id-bar {
		color: red;
	}
}

.\\\\.\\\\/style\\\\.module\\\\.css-nested-parens {
	.\\\\.\\\\/style\\\\.module\\\\.css-local9 div:has(.\\\\.\\\\/style\\\\.module\\\\.css-vertical-tiny, .\\\\.\\\\/style\\\\.module\\\\.css-vertical-small) {
		max-height: 0;
		margin: 0;
		overflow: hidden;
	}
}

.global-foo {
	.nested-global {
		color: red;
	}

	.\\\\.\\\\/style\\\\.module\\\\.css-local-in-global {
		color: blue;
	}
}

@unknown .class {
	color: red;

	.class {
		color: red;
	}
}

.class .\\\\.\\\\/style\\\\.module\\\\.css-in-local-global-scope,
.class .\\\\.\\\\/style\\\\.module\\\\.css-in-local-global-scope,
.\\\\.\\\\/style\\\\.module\\\\.css-class-local-scope .in-local-global-scope {
	color: red;
}

@container (width > 400px) {
	.\\\\.\\\\/style\\\\.module\\\\.css-class-in-container {
		font-size: 1.5em;
	}
}

@container summary (min-width: 400px) {
	@container (width > 400px) {
		.\\\\.\\\\/style\\\\.module\\\\.css-deep-class-in-container {
			font-size: 1.5em;
		}
	}
}

:scope {
	color: red;
}

.\\\\.\\\\/style\\\\.module\\\\.css-placeholder-gray-700:-ms-input-placeholder {
	--\\\\.\\\\/style\\\\.module\\\\.css-placeholder-opacity: 1;
	color: #4a5568;
	color: rgba(74, 85, 104, var(--\\\\.\\\\/style\\\\.module\\\\.css-placeholder-opacity));
}
.\\\\.\\\\/style\\\\.module\\\\.css-placeholder-gray-700::-ms-input-placeholder {
	--\\\\.\\\\/style\\\\.module\\\\.css-placeholder-opacity: 1;
	color: #4a5568;
	color: rgba(74, 85, 104, var(--\\\\.\\\\/style\\\\.module\\\\.css-placeholder-opacity));
}
.\\\\.\\\\/style\\\\.module\\\\.css-placeholder-gray-700::placeholder {
	--\\\\.\\\\/style\\\\.module\\\\.css-placeholder-opacity: 1;
	color: #4a5568;
	color: rgba(74, 85, 104, var(--\\\\.\\\\/style\\\\.module\\\\.css-placeholder-opacity));
}

:root {
	--\\\\.\\\\/style\\\\.module\\\\.css-test: dark;
}

@media screen and (prefers-color-scheme: var(--\\\\.\\\\/style\\\\.module\\\\.css-test)) {
	.\\\\.\\\\/style\\\\.module\\\\.css-baz {
		color: white;
	}
}

@keyframes \\\\.\\\\/style\\\\.module\\\\.css-slidein{
	from {
		margin-left: 100%;
		width: 300%;
	}

	to {
		margin-left: 0%;
		width: 100%;
	}
}

.\\\\.\\\\/style\\\\.module\\\\.css-class {
	animation:
		foo var(--\\\\.\\\\/style\\\\.module\\\\.css-animation-name) 3s,
		var(--\\\\.\\\\/style\\\\.module\\\\.css-animation-name) 3s,
		3s linear 1s infinite running \\\\.\\\\/style\\\\.module\\\\.css-slidein,
		3s linear env(foo, var(--\\\\.\\\\/style\\\\.module\\\\.css-baz)) infinite running \\\\.\\\\/style\\\\.module\\\\.css-slidein;
}

:root {
	--\\\\.\\\\/style\\\\.module\\\\.css-baz: 10px;
}

.\\\\.\\\\/style\\\\.module\\\\.css-class {
	bar: env(foo, var(--\\\\.\\\\/style\\\\.module\\\\.css-baz));
}

.global-foo, .\\\\.\\\\/style\\\\.module\\\\.css-bar {
	.\\\\.\\\\/style\\\\.module\\\\.css-local-in-global       {
		color: blue;
	}

	@media screen {
		.my-global-class-again,
		.\\\\.\\\\/style\\\\.module\\\\.css-my-global-class-again {
			color: red;
		}
	}
}

.\\\\.\\\\/style\\\\.module\\\\.css-first-nested {
	.\\\\.\\\\/style\\\\.module\\\\.css-first-nested-nested {
		color: red;
	}
}

.\\\\.\\\\/style\\\\.module\\\\.css-first-nested-at-rule {
	@media screen {
		.\\\\.\\\\/style\\\\.module\\\\.css-first-nested-nested-at-rule-deep {
			color: red;
		}
	}
}

.again-global {
	color:red;
}

.again-again-global {
	.again-again-global {
		color: red;
	}
}

:root {
	--\\\\.\\\\/style\\\\.module\\\\.css-foo: red;
}

.again-again-global {
	color: var(--foo);

	.again-again-global {
		color: var(--foo);
	}
}

.again-again-global {
	animation: slidein 3s;

	.again-again-global, .\\\\.\\\\/style\\\\.module\\\\.css-class, .\\\\.\\\\/style\\\\.module\\\\.css-nested1.nested2.\\\\.\\\\/style\\\\.module\\\\.css-nested3 {
		animation: \\\\.\\\\/style\\\\.module\\\\.css-slidein 3s;
	}

  .\\\\.\\\\/style\\\\.module\\\\.css-local2 .global,
	.\\\\.\\\\/style\\\\.module\\\\.css-local3 {
		color: red;
	}
}

@unknown var(--foo) {
	color: red;
}

.\\\\.\\\\/style\\\\.module\\\\.css-class {
	.\\\\.\\\\/style\\\\.module\\\\.css-class {
		.\\\\.\\\\/style\\\\.module\\\\.css-class {
			.\\\\.\\\\/style\\\\.module\\\\.css-class {}
		}
	}
}

.\\\\.\\\\/style\\\\.module\\\\.css-class {
	.\\\\.\\\\/style\\\\.module\\\\.css-class {
		.\\\\.\\\\/style\\\\.module\\\\.css-class {
			.\\\\.\\\\/style\\\\.module\\\\.css-class {
				animation: \\\\.\\\\/style\\\\.module\\\\.css-slidein 3s;
			}
		}
	}
}

.\\\\.\\\\/style\\\\.module\\\\.css-class {
	animation: \\\\.\\\\/style\\\\.module\\\\.css-slidein 3s;
	.\\\\.\\\\/style\\\\.module\\\\.css-class {
		animation: \\\\.\\\\/style\\\\.module\\\\.css-slidein 3s;
		.\\\\.\\\\/style\\\\.module\\\\.css-class {
			animation: \\\\.\\\\/style\\\\.module\\\\.css-slidein 3s;
			.\\\\.\\\\/style\\\\.module\\\\.css-class {
				animation: \\\\.\\\\/style\\\\.module\\\\.css-slidein 3s;
			}
		}
	}
}

.\\\\.\\\\/style\\\\.module\\\\.my-css-myCssClass {
    color: red;
}

.class {
    color: teal;
}

.\\\\.\\\\/identifiers\\\\.module\\\\.css-UnusedClassName{
    color: red;
    padding: var(--\\\\.\\\\/identifiers\\\\.module\\\\.css-variable-unused-class);
    --\\\\.\\\\/identifiers\\\\.module\\\\.css-variable-unused-class: 10px;
}

.\\\\.\\\\/identifiers\\\\.module\\\\.css-UsedClassName {
    color: green;
    padding: var(--\\\\.\\\\/identifiers\\\\.module\\\\.css-variable-used-class);
    --\\\\.\\\\/identifiers\\\\.module\\\\.css-variable-used-class: 10px;
}

head{--webpack-use-style_js:class/local1/local2/local3/local4/local5/local6/local7/disabled/mButtonDisabled/tipOnly/local8/parent1/child1/vertical-tiny/vertical-small/otherDiv/horizontal-tiny/horizontal-small/description/local9/local10/local11/local12/local13/local14/local15/local16/nested1/nested3/ident/localkeyframes/pos1x%pos1y%pos2x%pos2y%localkeyframes2/animation/vars/local-color%globalVars/wideScreenClass/narrowScreenClass/displayGridInSupports/floatRightInNegativeSupports/displayFlexInMediaInSupports/displayFlexInSupportsInMedia/displayFlexInSupportsInMediaUpperCase/animationUpperCase/localkeyframesUPPERCASE/localkeyframes2UPPPERCASE/localUpperCase/VARS/LOCAL-COLOR%globalVarsUpperCase/inSupportScope/a/animationName/b/c/d/animation-name%mozAnimationName/my-color%c0ffee/padding-sm/padding-lg/nested-pure/nested-media/nested-supports/nested-layer/not-selector-inside/nested-var/again/nested-with-local-pseudo/local-nested/bar/id-foo/id-bar/nested-parens/local-in-global/in-local-global-scope/class-local-scope/class-in-container/deep-class-in-container/placeholder-gray-700/placeholder-opacity%test%baz%slidein/my-global-class-again/first-nested/first-nested-nested/first-nested-at-rule/first-nested-nested-at-rule-deep/foo%\\\\.\\\\/style\\\\.module\\\\.css,myCssClass/\\\\.\\\\/style\\\\.module\\\\.my-css,\\\\.\\\\/style\\\\.module\\\\.css\\\\.invalid,UnusedClassName/variable-unused-class%UsedClassName/variable-used-class%\\\\.\\\\/identifiers\\\\.module\\\\.css;}"
`;

exports[`ConfigCacheTestCases css css-modules exported tests should allow to create css modules 2`] = `
".my-app-274-S {
	color: red;
}

.my-app-274-Zw,
.my-app-274-yl .global,
.my-app-274-J_ {
	color: green;
}

.global .my-app-274-gc {
	color: yellow;
}

.my-app-274-Xg.global.my-app-274-AY {
	color: blue;
}

.my-app-274-Kw div:not(.disabled, .mButtonDisabled, .tipOnly) {
    pointer-events: initial !important;
}

.my-app-274-rw :is(div.parent1.child1.vertical-tiny,
    div.parent1.child1.vertical-small,
    div.otherDiv.horizontal-tiny,
    div.otherDiv.horizontal-small div.description) {
  max-height: 0;
  margin: 0;
  overflow: hidden;
}

.my-app-274-\\\\$Y :matches(div.parent1.child1.vertical-tiny,
    div.parent1.child1.vertical-small,
    div.otherDiv.horizontal-tiny,
    div.otherDiv.horizontal-small div.description) {
  max-height: 0;
  margin: 0;
  overflow: hidden;
}

.my-app-274-ie :where(div.parent1.child1.vertical-tiny,
    div.parent1.child1.vertical-small,
    div.otherDiv.horizontal-tiny,
    div.otherDiv.horizontal-small div.description) {
  max-height: 0;
  margin: 0;
  overflow: hidden;
}

.my-app-274-PK div:has(.disabled, .mButtonDisabled, .tipOnly) {
    pointer-events: initial !important;
}

.my-app-274-yK div:current(p, span) {
	background-color: yellow;
}

.my-app-274-P_ div:past(p, span) {
	display: none;
}

.my-app-274-Y4 div:future(p, span) {
	background-color: yellow;
}

.my-app-274-TT div:-moz-any(ol, ul, menu, dir) {
	list-style-type: square;
}

.my-app-274-rT li:-webkit-any(:first-child, :last-child) {
	background-color: aquamarine;
}

.my-app-274-\\\\$Y :matches(div.parent1.child1.vertical-tiny,
    div.parent1.child1.vertical-small,
    div.otherDiv.horizontal-tiny,
    div.otherDiv.horizontal-small div.description) {
	max-height: 0;
	margin: 0;
	overflow: hidden;
}

.my-app-274-RX.nested2.my-app-274-X2 {
	color: pink;
}

#my-app-274-yR {
	color: purple;
}

@keyframes my-app-274-y3{
	0% {
		left: var(--my-app-274-Gx);
		top: var(--my-app-274-\\\\$s);
		color: var(--theme-color1);
	}
	100% {
		left: var(--my-app-274-MX);
		top: var(--my-app-274-nj);
		color: var(--theme-color2);
	}
}

@keyframes my-app-274-JJ{
	0% {
		left: 0;
	}
	100% {
		left: 100px;
	}
}

.my-app-274-oQ {
	animation-name: my-app-274-y3;
	animation: 3s ease-in 1s 2 reverse both paused my-app-274-y3, my-app-274-JJ;
	--my-app-274-Gx: 0px;
	--my-app-274-\\\\$s: 0px;
	--my-app-274-MX: 10px;
	--my-app-274-nj: 20px;
}

/* .composed {
	composes: local1;
	composes: local2;
} */

.my-app-274-gR {
	color: var(--my-app-274-y4);
	--my-app-274-y4: red;
}

.my-app-274-xk {
	color: var(--global-color);
	--global-color: red;
}

@media (min-width: 1600px) {
	.my-app-274-w7 {
		color: var(--my-app-274-y4);
		--my-app-274-y4: green;
	}
}

@media screen and (max-width: 600px) {
	.my-app-274-J {
		color: var(--my-app-274-y4);
		--my-app-274-y4: purple;
	}
}

@supports (display: grid) {
	.my-app-274-T\\\\$ {
		display: grid;
	}
}

@supports not (display: grid) {
  .my-app-274-zz {
    float: right;
  }
}

@supports (display: flex) {
  @media screen and (min-width: 900px) {
    .my-app-274-Kr {
      display: flex;
    }
  }
}

@media screen and (min-width: 900px) {
	@supports (display: flex) {
    .my-app-274-SQ {
      display: flex;
    }
  }
}

@MEDIA screen and (min-width: 900px) {
	@SUPPORTS (display: flex) {
		.my-app-274-XM {
			display: flex;
		}
	}
}

.animationUpperCase {
	ANIMATION-NAME: my-app-274-T4;
	ANIMATION: 3s ease-in 1s 2 reverse both paused my-app-274-T4, my-app-274-Xi;
	--my-app-274-Gx: 0px;
	--my-app-274-\\\\$s: 0px;
	--my-app-274-MX: 10px;
	--my-app-274-nj: 20px;
}

@KEYFRAMES my-app-274-T4{
	0% {
		left: VAR(--my-app-274-Gx);
		top: VAR(--my-app-274-\\\\$s);
		color: VAR(--theme-color1);
	}
	100% {
		left: VAR(--my-app-274-MX);
		top: VAR(--my-app-274-nj);
		color: VAR(--theme-color2);
	}
}

@KEYframes my-app-274-Xi{
	0% {
		left: 0;
	}
	100% {
		left: 100px;
	}
}

.globalUpperCase .localUpperCase {
	color: yellow;
}

.my-app-274-ms {
	color: VAR(--my-app-274-DJ);
	--my-app-274-DJ: red;
}

.my-app-274-cU {
	COLOR: VAR(--GLOBAR-COLOR);
	--GLOBAR-COLOR: red;
}

@supports (top: env(safe-area-inset-top, 0)) {
	.my-app-274-FO {
		color: red;
	}
}

.a {
	animation: 3s my-app-274-w3;
	-webkit-animation: 3s my-app-274-w3;
}

.b {
	animation: my-app-274-w3 3s;
	-webkit-animation: my-app-274-w3 3s;
}

.c {
	animation-name: my-app-274-w3;
	-webkit-animation-name: my-app-274-w3;
}

.d {
	--my-app-274-VQ: animationName;
}

@keyframes my-app-274-w3{
	0% {
		background: white;
	}
	100% {
		background: red;
	}
}

@-webkit-keyframes my-app-274-w3{
	0% {
		background: white;
	}
	100% {
		background: red;
	}
}

@-moz-keyframes my-app-274-t6{
	0% {
		background: white;
	}
	100% {
		background: red;
	}
}

@counter-style thumbs {
	system: cyclic;
	symbols: \\"\\\\1F44D\\";
	suffix: \\" \\";
}

@font-feature-values Font One {
	@styleset {
		nice-style: 12;
	}
}

/* At-rule for \\"nice-style\\" in Font Two */
@font-feature-values Font Two {
	@styleset {
		nice-style: 4;
	}
}

@property --my-app-274-lC{
	syntax: \\"<color>\\";
	inherits: false;
	initial-value: #c0ffee;
}

.my-app-274-S {
	color: var(--my-app-274-lC);
}

@layer utilities {
	.my-app-274-zE {
		padding: 0.5rem;
	}

	.my-app-274-FP {
		padding: 0.8rem;
	}
}

.my-app-274-S {
	color: red;

	.nested-pure {
		color: red;
	}

	@media screen and (min-width: 200px) {
		color: blue;

		.nested-media {
			color: blue;
		}
	}

	@supports (display: flex) {
		display: flex;

		.nested-supports {
			display: flex;
		}
	}

	@layer foo {
		background: red;

		.nested-layer {
			background: red;
		}
	}

	@container foo {
		background: red;

		.nested-layer {
			background: red;
		}
	}
}

.not-selector-inside {
	color: #fff;
	opacity: 0.12;
	padding: .5px;
	unknown: :local(.test);
	unknown1: :local .test;
	unknown2: :global .test;
	unknown3: :global .test;
	unknown4: .foo, .bar, #bar;
}

@unknown :local .local :global .global {
	color: red;
}

@unknown :local(.local) :global(.global) {
	color: red;
}

.nested-var {
	.again {
		color: var(--my-app-274-y4);
	}
}

.nested-with-local-pseudo {
	color: red;

	.local-nested {
		color: red;
	}

	.global-nested {
		color: red;
	}

	.local-nested {
		color: red;
	}

	.global-nested {
		color: red;
	}

	.local-nested, .global-nested-next {
		color: red;
	}

	.local-nested, .global-nested-next {
		color: red;
	}

	.foo, .bar {
		color: red;
	}
}

#id-foo {
	color: red;

	#id-bar {
		color: red;
	}
}

.nested-parens {
	.my-app-274-\\\\$Y div:has(.vertical-tiny, .vertical-small) {
		max-height: 0;
		margin: 0;
		overflow: hidden;
	}
}

.global-foo {
	.nested-global {
		color: red;
	}

	.local-in-global {
		color: blue;
	}
}

@unknown .class {
	color: red;

	.class {
		color: red;
	}
}

.class .my-app-274-Zv,
.class .my-app-274-Zv,
.my-app-274-gz .in-local-global-scope {
	color: red;
}

@container (width > 400px) {
	.my-app-274-Gp {
		font-size: 1.5em;
	}
}

@container summary (min-width: 400px) {
	@container (width > 400px) {
		.my-app-274-rn {
			font-size: 1.5em;
		}
	}
}

:scope {
	color: red;
}

.placeholder-gray-700:-ms-input-placeholder {
	--my-app-274-xs: 1;
	color: #4a5568;
	color: rgba(74, 85, 104, var(--my-app-274-xs));
}
.placeholder-gray-700::-ms-input-placeholder {
	--my-app-274-xs: 1;
	color: #4a5568;
	color: rgba(74, 85, 104, var(--my-app-274-xs));
}
.placeholder-gray-700::placeholder {
	--my-app-274-xs: 1;
	color: #4a5568;
	color: rgba(74, 85, 104, var(--my-app-274-xs));
}

:root {
	--my-app-274-Bu: dark;
}

@media screen and (prefers-color-scheme: var(--my-app-274-Bu)) {
	.my-app-274-Wx {
		color: white;
	}
}

@keyframes my-app-274-Y8{
	from {
		margin-left: 100%;
		width: 300%;
	}

	to {
		margin-left: 0%;
		width: 100%;
	}
}

.my-app-274-S {
	animation:
		foo var(--my-app-274-VQ) 3s,
		var(--my-app-274-VQ) 3s,
		3s linear 1s infinite running my-app-274-Y8,
		3s linear env(foo, var(--my-app-274-Wx)) infinite running my-app-274-Y8;
}

:root {
	--my-app-274-Wx: 10px;
}

.my-app-274-S {
	bar: env(foo, var(--my-app-274-Wx));
}

.global-foo, .bar {
	.local-in-global       {
		color: blue;
	}

	@media screen {
		.my-global-class-again,
		.my-global-class-again {
			color: red;
		}
	}
}

.first-nested {
	.first-nested-nested {
		color: red;
	}
}

.first-nested-at-rule {
	@media screen {
		.first-nested-nested-at-rule-deep {
			color: red;
		}
	}
}

.again-global {
	color:red;
}

.again-again-global {
	.again-again-global {
		color: red;
	}
}

:root {
	--foo: red;
}

.again-again-global {
	color: var(--foo);

	.again-again-global {
		color: var(--foo);
	}
}

.again-again-global {
	animation: slidein 3s;

	.again-again-global, .my-app-274-S, .my-app-274-RX.nested2.my-app-274-X2 {
		animation: my-app-274-Y8 3s;
	}

  .my-app-274-yl .global,
	.my-app-274-J_ {
		color: red;
	}
}

@unknown var(--foo) {
	color: red;
}

.my-app-274-S {
	.my-app-274-S {
		.my-app-274-S {
			.my-app-274-S {}
		}
	}
}

.my-app-274-S {
	.my-app-274-S {
		.my-app-274-S {
			.my-app-274-S {
				animation: my-app-274-Y8 3s;
			}
		}
	}
}

.my-app-274-S {
	animation: my-app-274-Y8 3s;
	.my-app-274-S {
		animation: my-app-274-Y8 3s;
		.my-app-274-S {
			animation: my-app-274-Y8 3s;
			.my-app-274-S {
				animation: my-app-274-Y8 3s;
			}
		}
	}
}

.my-app-444-s {
    color: red;
}

.class {
    color: teal;
}

.UnusedClassName{
    color: red;
    padding: var(--my-app-627-Wc);
    --my-app-627-Wc: 10px;
}

.my-app-627-Q3 {
    color: green;
    padding: var(--my-app-627-PB);
    --my-app-627-PB: 10px;
}

head{--webpack-my-app-249:S/Zw/yl/J_/gc/Xg/AY/Kw/rw/\\\\$Y/ie/PK/yK/P_/Y4/TT/rT/RX/X2/yR/y3/Gx%\\\\$s%MX%nj%JJ/oQ/gR/y4%xk/w7/J/T\\\\$/zz/Kr/SQ/XM/T4/Xi/ms/DJ%cU/FO/w3/VQ%t6/lC%zE/FP/Zv/gz/Gp/rn/xs%Bu%Wx%Y8/_274,s/_444,_438,Wc%Q3/PB%_627;}"
`;

exports[`ConfigCacheTestCases css pure-css exported tests should compile 1`] = `
Array [
  ".class {
	color: red;
}

.local1,
.local2 :global .global,
.local3 {
	color: green;
}

:global .global :local .local4 {
	color: yellow;
}

.local5:global(.global).local6 {
	color: blue;
}

.local7 div:not(.disabled, .mButtonDisabled, .tipOnly) {
    pointer-events: initial !important;
}

.local8 :is(div.parent1.child1.vertical-tiny,
    div.parent1.child1.vertical-small,
    div.otherDiv.horizontal-tiny,
    div.otherDiv.horizontal-small div.description) {
  max-height: 0;
  margin: 0;
  overflow: hidden;
}

.local9 :matches(div.parent1.child1.vertical-tiny,
    div.parent1.child1.vertical-small,
    div.otherDiv.horizontal-tiny,
    div.otherDiv.horizontal-small div.description) {
  max-height: 0;
  margin: 0;
  overflow: hidden;
}

.local10 :where(div.parent1.child1.vertical-tiny,
    div.parent1.child1.vertical-small,
    div.otherDiv.horizontal-tiny,
    div.otherDiv.horizontal-small div.description) {
  max-height: 0;
  margin: 0;
  overflow: hidden;
}

.local11 div:has(.disabled, .mButtonDisabled, .tipOnly) {
    pointer-events: initial !important;
}

.local12 div:current(p, span) {
	background-color: yellow;
}

.local13 div:past(p, span) {
	display: none;
}

.local14 div:future(p, span) {
	background-color: yellow;
}

.local15 div:-moz-any(ol, ul, menu, dir) {
	list-style-type: square;
}

.local16 li:-webkit-any(:first-child, :last-child) {
	background-color: aquamarine;
}

.local9 :matches(div.parent1.child1.vertical-tiny,
    div.parent1.child1.vertical-small,
    div.otherDiv.horizontal-tiny,
    div.otherDiv.horizontal-small div.description) {
	max-height: 0;
	margin: 0;
	overflow: hidden;
}

:global(:global(:local(.nested1)).nested2).nested3 {
	color: pink;
}

#ident {
	color: purple;
}

@keyframes localkeyframes {
	0% {
		left: var(--pos1x);
		top: var(--pos1y);
		color: var(--theme-color1);
	}
	100% {
		left: var(--pos2x);
		top: var(--pos2y);
		color: var(--theme-color2);
	}
}

@keyframes localkeyframes2 {
	0% {
		left: 0;
	}
	100% {
		left: 100px;
	}
}

.animation {
	animation-name: localkeyframes;
	animation: 3s ease-in 1s 2 reverse both paused localkeyframes, localkeyframes2;
	--pos1x: 0px;
	--pos1y: 0px;
	--pos2x: 10px;
	--pos2y: 20px;
}

/* .composed {
	composes: local1;
	composes: local2;
} */

.vars {
	color: var(--local-color);
	--local-color: red;
}

.globalVars :global {
	color: var(--global-color);
	--global-color: red;
}

@media (min-width: 1600px) {
	.wideScreenClass {
		color: var(--local-color);
		--local-color: green;
	}
}

@media screen and (max-width: 600px) {
	.narrowScreenClass {
		color: var(--local-color);
		--local-color: purple;
	}
}

@supports (display: grid) {
	.displayGridInSupports {
		display: grid;
	}
}

@supports not (display: grid) {
  .floatRightInNegativeSupports {
    float: right;
  }
}

@supports (display: flex) {
  @media screen and (min-width: 900px) {
    .displayFlexInMediaInSupports {
      display: flex;
    }
  }
}

@media screen and (min-width: 900px) {
	@supports (display: flex) {
    .displayFlexInSupportsInMedia {
      display: flex;
    }
  }
}

@MEDIA screen and (min-width: 900px) {
	@SUPPORTS (display: flex) {
		.displayFlexInSupportsInMediaUpperCase {
			display: flex;
		}
	}
}

.animationUpperCase {
	ANIMATION-NAME: localkeyframesUPPERCASE;
	ANIMATION: 3s ease-in 1s 2 reverse both paused localkeyframesUPPERCASE, localkeyframes2UPPPERCASE;
	--pos1x: 0px;
	--pos1y: 0px;
	--pos2x: 10px;
	--pos2y: 20px;
}

@KEYFRAMES localkeyframesUPPERCASE {
	0% {
		left: VAR(--pos1x);
		top: VAR(--pos1y);
		color: VAR(--theme-color1);
	}
	100% {
		left: VAR(--pos2x);
		top: VAR(--pos2y);
		color: VAR(--theme-color2);
	}
}

@KEYframes localkeyframes2UPPPERCASE {
	0% {
		left: 0;
	}
	100% {
		left: 100px;
	}
}

:GLOBAL .globalUpperCase :LOCAL .localUpperCase {
	color: yellow;
}

.VARS {
	color: VAR(--LOCAL-COLOR);
	--LOCAL-COLOR: red;
}

.globalVarsUpperCase :GLOBAL {
	COLOR: VAR(--GLOBAR-COLOR);
	--GLOBAR-COLOR: red;
}

@supports (top: env(safe-area-inset-top, 0)) {
	.inSupportScope {
		color: red;
	}
}

.a {
	animation: 3s animationName;
	-webkit-animation: 3s animationName;
}

.b {
	animation: animationName 3s;
	-webkit-animation: animationName 3s;
}

.c {
	animation-name: animationName;
	-webkit-animation-name: animationName;
}

.d {
	--animation-name: animationName;
}

@keyframes animationName {
	0% {
		background: white;
	}
	100% {
		background: red;
	}
}

@-webkit-keyframes animationName {
	0% {
		background: white;
	}
	100% {
		background: red;
	}
}

@-moz-keyframes mozAnimationName {
	0% {
		background: white;
	}
	100% {
		background: red;
	}
}

@counter-style thumbs {
	system: cyclic;
	symbols: \\"\\\\1F44D\\";
	suffix: \\" \\";
}

@font-feature-values Font One {
	@styleset {
		nice-style: 12;
	}
}

/* At-rule for \\"nice-style\\" in Font Two */
@font-feature-values Font Two {
	@styleset {
		nice-style: 4;
	}
}

@property --my-color {
	syntax: \\"<color>\\";
	inherits: false;
	initial-value: #c0ffee;
}

.class {
	color: var(--my-color);
}

@layer utilities {
	.padding-sm {
		padding: 0.5rem;
	}

	.padding-lg {
		padding: 0.8rem;
	}
}

.class {
	color: red;

	.nested-pure {
		color: red;
	}

	@media screen and (min-width: 200px) {
		color: blue;

		.nested-media {
			color: blue;
		}
	}

	@supports (display: flex) {
		display: flex;

		.nested-supports {
			display: flex;
		}
	}

	@layer foo {
		background: red;

		.nested-layer {
			background: red;
		}
	}

	@container foo {
		background: red;

		.nested-layer {
			background: red;
		}
	}
}

.not-selector-inside {
	color: #fff;
	opacity: 0.12;
	padding: .5px;
	unknown: :local(.test);
	unknown1: :local .test;
	unknown2: :global .test;
	unknown3: :global .test;
	unknown4: .foo, .bar, #bar;
}

@unknown :local .local :global .global {
	color: red;
}

@unknown :local(.local) :global(.global) {
	color: red;
}

.nested-var {
	.again {
		color: var(--local-color);
	}
}

.nested-with-local-pseudo {
	color: red;

	:local .local-nested {
		color: red;
	}

	:global .global-nested {
		color: red;
	}

	:local(.local-nested) {
		color: red;
	}

	:global(.global-nested) {
		color: red;
	}

	:local .local-nested, :global .global-nested-next {
		color: red;
	}

	:local(.local-nested), :global(.global-nested-next) {
		color: red;
	}

	:global .foo, .bar {
		color: red;
	}
}

#id-foo {
	color: red;

	#id-bar {
		color: red;
	}
}

.nested-parens {
	.local9 div:has(.vertical-tiny, .vertical-small) {
		max-height: 0;
		margin: 0;
		overflow: hidden;
	}
}

:global .global-foo {
	.nested-global {
		color: red;
	}

	:local .local-in-global {
		color: blue;
	}
}

@unknown .class {
	color: red;

	.class {
		color: red;
	}
}

:global .class :local .in-local-global-scope,
:global .class :local .in-local-global-scope,
:local .class-local-scope :global .in-local-global-scope {
	color: red;
}

@container (width > 400px) {
	.class-in-container {
		font-size: 1.5em;
	}
}

@container summary (min-width: 400px) {
	@container (width > 400px) {
		.deep-class-in-container {
			font-size: 1.5em;
		}
	}
}

:scope {
	color: red;
}

.placeholder-gray-700:-ms-input-placeholder {
	--placeholder-opacity: 1;
	color: #4a5568;
	color: rgba(74, 85, 104, var(--placeholder-opacity));
}
.placeholder-gray-700::-ms-input-placeholder {
	--placeholder-opacity: 1;
	color: #4a5568;
	color: rgba(74, 85, 104, var(--placeholder-opacity));
}
.placeholder-gray-700::placeholder {
	--placeholder-opacity: 1;
	color: #4a5568;
	color: rgba(74, 85, 104, var(--placeholder-opacity));
}

:root {
	--test: dark;
}

@media screen and (prefers-color-scheme: var(--test)) {
	.baz {
		color: white;
	}
}

@keyframes slidein {
	from {
		margin-left: 100%;
		width: 300%;
	}

	to {
		margin-left: 0%;
		width: 100%;
	}
}

.class {
	animation:
		foo var(--animation-name) 3s,
		var(--animation-name) 3s,
		3s linear 1s infinite running slidein,
		3s linear env(foo, var(--baz)) infinite running slidein;
}

:root {
	--baz: 10px;
}

.class {
	bar: env(foo, var(--baz));
}

:global      .global-foo, :local        .bar {
	:local      .local-in-global       {
		color: blue;
	}

	@media screen {
		:global .my-global-class-again,
		:local .my-global-class-again {
			color: red;
		}
	}
}

.first-nested {
	.first-nested-nested {
		color: red;
	}
}

.first-nested-at-rule {
	@media screen {
		.first-nested-nested-at-rule-deep {
			color: red;
		}
	}
}

:global .again-global {
	color:red;
}

:global .again-again-global {
	:global .again-again-global {
		color: red;
	}
}

:root {
	--foo: red;
}

:global .again-again-global {
	color: var(--foo);

	:global .again-again-global {
		color: var(--foo);
	}
}

:global .again-again-global {
	animation: slidein 3s;

	:global .again-again-global, .class, :global(:global(:local(.nested1)).nested2).nested3 {
		animation: slidein 3s;
	}

  .local2 :global .global,
	.local3 {
		color: red;
	}
}

@unknown var(--foo) {
	color: red;
}

.class {
	.class {
		.class {
			.class {}
		}
	}
}

.class {
	.class {
		.class {
			.class {
				animation: slidein 3s;
			}
		}
	}
}

.class {
	animation: slidein 3s;
	.class {
		animation: slidein 3s;
		.class {
			animation: slidein 3s;
			.class {
				animation: slidein 3s;
			}
		}
	}
}

.class {
	color: red;
	background: var(--color);
}

@keyframes test {
	0% {
		color: red;
	}
	100% {
		color: blue;
	}
}

:local(.class) {
	color: red;
}

:local .class {
	color: green;
}

:global(.class) {
	color: blue;
}

:global .class {
	color: white;
}

:export {
	foo: bar;
}

.class {
	animation: test 1s, test;
}

head{--webpack-main:\\\\.\\\\.\\\\/css-modules\\\\/style\\\\.module\\\\.css,\\\\.\\\\/style\\\\.css;}",
]
`;

exports[`ConfigCacheTestCases css urls exported tests should be able to handle styles in div.css 1`] = `
Object {
  "--foo": " url(img.09a1a1112c577c279435.png)",
  "--foo-bar": " \\"http://www.example.com/pinkish.gif\\"",
  "/* TODO fix me */
	/*a146": " url('./img.png', 'foo', './img.png', url('./img.png'));*/
	/*a147: image-set(url('./img.png', 'foo', './img.png', url('./img.png')) 1x, url(\\"./img2x.png\\") 2x);*/
",
  "a": " url(img.09a1a1112c577c279435.png)",
  "a1": " url(img.09a1a1112c577c279435.png)",
  "a10": " green url( img\\\\ img.09a1a1112c577c279435.png ) xyz",
  "a100": " url(img\\\\)img.09a1a1112c577c279435.png)",
  "a101": " url(img\\\\ img.09a1a1112c577c279435.png)",
  "a102": " url(img\\\\ img.09a1a1112c577c279435.png)",
  "a103": " url(img\\\\(img.09a1a1112c577c279435.png)",
  "a104": " url(img\\\\(img.09a1a1112c577c279435.png)",
  "a105": " url(img\\\\(img.09a1a1112c577c279435.png)",
  "a106": " url(img\\\\(img.09a1a1112c577c279435.png)",
  "a107": " url(img\\\\'\\\\'\\\\'img.09a1a1112c577c279435.png)",
  "a108": " url(\\"img'() img.09a1a1112c577c279435.png\\")",
  "a109": " url(img\\\\'img.09a1a1112c577c279435.png)",
  "a11": " green url( img\\\\ img.09a1a1112c577c279435.png ) xyz",
  "a110": " url(img\\\\(img.09a1a1112c577c279435.png)",
  "a111": " url(img\\\\)img.09a1a1112c577c279435.png)",
  "a112": " url(img\\\\ img.09a1a1112c577c279435.png)",
  "a113": " url(img\\\\'\\\\'\\\\'img.09a1a1112c577c279435.png)",
  "a114": " url(\\"img'() img.09a1a1112c577c279435.png\\")",
  "a115": " url(img\\\\'img.09a1a1112c577c279435.png)",
  "a116": " url(img\\\\(img.09a1a1112c577c279435.png)",
  "a117": " url(img\\\\)img.09a1a1112c577c279435.png)",
  "a118": " url(img\\\\ img.09a1a1112c577c279435.png)",
  "a119": " url(img.09a1a1112c577c279435.png)",
  "a12": " green url(img.09a1a1112c577c279435.png) xyz",
  "a120": " url(img\\\\'\\\\'\\\\'img.09a1a1112c577c279435.png)",
  "a121": " url(\\"img'() img.09a1a1112c577c279435.png\\")",
  "a122": " url(img\\\\'img.09a1a1112c577c279435.png)",
  "a123": " url(img\\\\(img.09a1a1112c577c279435.png)",
  "a124": " url(img\\\\)img.09a1a1112c577c279435.png)",
  "a125": " url(img\\\\ img.09a1a1112c577c279435.png)",
  "a126": " url(img.09a1a1112c577c279435.png)",
  "a127": " url(img.09a1a1112c577c279435.png)",
  "a128": " url(img\\\\'img.09a1a1112c577c279435.png)",
  "a129": " url(\\"img'() img.09a1a1112c577c279435.png\\")",
  "a13": " green url(data:image/png;base64,AAA) url(http://example.com/image.jpg) url(//example.com/image.png) xyz",
  "a130": " url(\\"img'() img.09a1a1112c577c279435.png\\")",
  "a131": " url(img.09a1a1112c577c279435.png)",
  "a132": " url(img.09a1a1112c577c279435.png)",
  "a133": " url(img.09a1a1112c577c279435.png?foo=bar)",
  "a134": " url(img.09a1a1112c577c279435.png?foo=bar)",
  "a135": " url(img.09a1a1112c577c279435.png?foo=bar#hash)",
  "a136": " url(img.09a1a1112c577c279435.png?foo=bar#hash)",
  "a137": " url(img.09a1a1112c577c279435.png?foo=bar)",
  "a138": " url(img.09a1a1112c577c279435.png?bar=foo)",
  "a139": " url(img.09a1a1112c577c279435.png?foo=bar#foo)",
  "a14": " url(\\"data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 42 26' fill='%23007aff'><rect width='4' height='4'/><rect x='8' y='1' width='34' height='2'/><rect y='11' width='4' height='4'/><rect x='8' y='12' width='34' height='2'/><rect y='22' width='4' height='4'/><rect x='8' y='23' width='34' height='2'/></svg>\\")",
  "a140": " url(img.09a1a1112c577c279435.png?bar=foo#bar)",
  "a141": " url(img.09a1a1112c577c279435.png?foo=1&bar=2)",
  "a142": " url(img.09a1a1112c577c279435.png?foo=2&bar=1)",
  "a143": " url(data:image/svg+xml;charset=UTF-8,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22utf-8%22%3F%3E%0A%3C!DOCTYPE%20svg%20PUBLIC%20%22-%2F%2FW3C%2F%2FDTD%20SVG%201.1%2F%2FEN%22%20%22http%3A%2F%2Fwww.w3.org%2FGraphics%2FSVG%2F1.1%2FDTD%2Fsvg11.dtd%22%3E%0A%3Csvg%20version%3D%221.1%22%20id%3D%22Layer_1%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20xmlns%3Axlink%3D%22http%3A%2F%2Fwww.w3.org%2F1999%2Fxlink%22%20x%3D%220px%22%20y%3D%220px%22%0A%09%20width%3D%22191px%22%20height%3D%22191px%22%20viewBox%3D%220%200%20191%20191%22%20enable-background%3D%22new%200%200%20191%20191%22%20xml%3Aspace%3D%22preserve%22%3E%0A%3Cpath%20fill%3D%22%23636363%22%20d%3D%22M95.5%2C0C42.8%2C0%2C0%2C42.8%2C0%2C95.5S42.8%2C191%2C95.5%2C191S191%2C148.2%2C191%2C95.5S148.2%2C0%2C95.5%2C0z%20M95.5%2C187.6%0A%09c-50.848%2C0-92.1-41.25-92.1-92.1c0-50.848%2C41.252-92.1%2C92.1-92.1c50.85%2C0%2C92.1%2C41.252%2C92.1%2C92.1%0A%09C187.6%2C146.35%2C146.35%2C187.6%2C95.5%2C187.6z%22%2F%3E%0A%3Cg%3E%0A%09%3Cpath%20fill%3D%22%23636363%22%20d%3D%22M92.9%2C10v8.6H91v-6.5c-0.1%2C0.1-0.2%2C0.2-0.4%2C0.3c-0.2%2C0.1-0.3%2C0.2-0.4%2C0.2c-0.1%2C0-0.3%2C0.1-0.5%2C0.2%0A%09%09c-0.2%2C0.1-0.3%2C0.1-0.5%2C0.1v-1.6c0.5-0.1%2C0.9-0.3%2C1.4-0.5c0.5-0.2%2C0.8-0.5%2C1.2-0.7h1.1V10z%22%2F%3E%0A%09%3Cpath%20fill%3D%22%23636363%22%20d%3D%22M97.1%2C17.1h3.602v1.5h-5.6V18c0-0.4%2C0.1-0.8%2C0.2-1.2c0.1-0.4%2C0.3-0.6%2C0.5-0.9c0.2-0.3%2C0.5-0.5%2C0.7-0.7%0A%09%09c0.2-0.2%2C0.5-0.4%2C0.7-0.6c0.199-0.2%2C0.5-0.3%2C0.6-0.5c0.102-0.2%2C0.301-0.3%2C0.5-0.5c0.2-0.2%2C0.2-0.3%2C0.301-0.5%0A%09%09c0.101-0.2%2C0.101-0.3%2C0.101-0.5c0-0.4-0.101-0.6-0.3-0.8c-0.2-0.2-0.4-0.3-0.801-0.3c-0.699%2C0-1.399%2C0.3-2.101%2C0.9v-1.6%0A%09%09c0.7-0.5%2C1.5-0.7%2C2.5-0.7c0.399%2C0%2C0.8%2C0.1%2C1.101%2C0.2c0.301%2C0.1%2C0.601%2C0.3%2C0.899%2C0.5c0.3%2C0.2%2C0.399%2C0.5%2C0.5%2C0.8%0A%09%09c0.101%2C0.3%2C0.2%2C0.6%2C0.2%2C1s-0.102%2C0.7-0.2%2C1c-0.099%2C0.3-0.3%2C0.6-0.5%2C0.8c-0.2%2C0.2-0.399%2C0.5-0.7%2C0.7c-0.3%2C0.2-0.5%2C0.4-0.8%2C0.6%0A%09%09c-0.2%2C0.1-0.399%2C0.3-0.5%2C0.4s-0.3%2C0.3-0.5%2C0.4s-0.2%2C0.3-0.3%2C0.4C97.1%2C17%2C97.1%2C17%2C97.1%2C17.1z%22%2F%3E%0A%3C%2Fg%3E%0A%3Cg%3E%0A%09%3Cpath%20fill%3D%22%23636363%22%20d%3D%22M15%2C95.4c0%2C0.7-0.1%2C1.4-0.2%2C2c-0.1%2C0.6-0.4%2C1.1-0.7%2C1.5C13.8%2C99.3%2C13.4%2C99.6%2C12.9%2C99.8s-1%2C0.3-1.5%2C0.3%0A%09%09c-0.7%2C0-1.3-0.1-1.8-0.3v-1.5c0.4%2C0.3%2C1%2C0.4%2C1.6%2C0.4c0.6%2C0%2C1.1-0.2%2C1.5-0.7c0.4-0.5%2C0.5-1.1%2C0.5-1.9l0%2C0%0A%09%09C12.8%2C96.7%2C12.3%2C96.9%2C11.5%2C96.9c-0.3%2C0-0.7-0.102-1-0.2c-0.3-0.101-0.5-0.3-0.8-0.5c-0.3-0.2-0.4-0.5-0.5-0.8%0A%09%09c-0.1-0.3-0.2-0.7-0.2-1c0-0.4%2C0.1-0.8%2C0.2-1.2c0.1-0.4%2C0.3-0.7%2C0.6-0.9c0.3-0.2%2C0.6-0.5%2C0.9-0.6c0.3-0.1%2C0.8-0.2%2C1.2-0.2%0A%09%09c0.5%2C0%2C0.9%2C0.1%2C1.2%2C0.3c0.3%2C0.2%2C0.7%2C0.4%2C0.9%2C0.8s0.5%2C0.7%2C0.6%2C1.2S15%2C94.8%2C15%2C95.4z%20M13.1%2C94.4c0-0.2%2C0-0.4-0.1-0.6%0A%09%09c-0.1-0.2-0.1-0.4-0.2-0.5c-0.1-0.1-0.2-0.2-0.4-0.3c-0.2-0.1-0.3-0.1-0.5-0.1c-0.2%2C0-0.3%2C0-0.4%2C0.1s-0.3%2C0.2-0.3%2C0.3%0A%09%09c0%2C0.1-0.2%2C0.3-0.2%2C0.4c0%2C0.1-0.1%2C0.4-0.1%2C0.6c0%2C0.2%2C0%2C0.4%2C0.1%2C0.6c0.1%2C0.2%2C0.1%2C0.3%2C0.2%2C0.4c0.1%2C0.1%2C0.2%2C0.2%2C0.4%2C0.3%0A%09%09c0.2%2C0.1%2C0.3%2C0.1%2C0.5%2C0.1c0.2%2C0%2C0.3%2C0%2C0.4-0.1s0.2-0.2%2C0.3-0.3c0.1-0.1%2C0.2-0.2%2C0.2-0.4C13%2C94.7%2C13.1%2C94.6%2C13.1%2C94.4z%22%2F%3E%0A%3C%2Fg%3E%0A%3Cg%3E%0A%09%3Cpath%20fill%3D%22%23636363%22%20d%3D%22M176%2C99.7V98.1c0.6%2C0.4%2C1.2%2C0.602%2C2%2C0.602c0.5%2C0%2C0.8-0.102%2C1.1-0.301c0.301-0.199%2C0.4-0.5%2C0.4-0.801%0A%09%09c0-0.398-0.2-0.699-0.5-0.898c-0.3-0.2-0.8-0.301-1.3-0.301h-0.802V95h0.701c1.101%2C0%2C1.601-0.4%2C1.601-1.1c0-0.7-0.4-1-1.302-1%0A%09%09c-0.6%2C0-1.1%2C0.2-1.6%2C0.5v-1.5c0.6-0.3%2C1.301-0.4%2C2.1-0.4c0.9%2C0%2C1.5%2C0.2%2C2%2C0.6s0.701%2C0.9%2C0.701%2C1.5c0%2C1.1-0.601%2C1.8-1.701%2C2.1l0%2C0%0A%09%09c0.602%2C0.1%2C1.102%2C0.3%2C1.4%2C0.6s0.5%2C0.8%2C0.5%2C1.3c0%2C0.801-0.3%2C1.4-0.9%2C1.9c-0.6%2C0.5-1.398%2C0.7-2.398%2C0.7%0A%09%09C177.2%2C100.1%2C176.5%2C100%2C176%2C99.7z%22%2F%3E%0A%3C%2Fg%3E%0A%3Cg%3E%0A%09%3Cpath%20fill%3D%22%23636363%22%20d%3D%22M98.5%2C179.102c0%2C0.398-0.1%2C0.799-0.2%2C1.199C98.2%2C180.7%2C98%2C181%2C97.7%2C181.2s-0.601%2C0.5-0.9%2C0.601%0A%09%09c-0.3%2C0.1-0.7%2C0.199-1.2%2C0.199c-0.5%2C0-0.9-0.1-1.3-0.3c-0.4-0.2-0.7-0.399-0.9-0.8c-0.2-0.4-0.5-0.7-0.6-1.2%0A%09%09c-0.1-0.5-0.2-1-0.2-1.601c0-0.699%2C0.1-1.399%2C0.3-2c0.2-0.601%2C0.4-1.101%2C0.8-1.5c0.4-0.399%2C0.7-0.699%2C1.2-1c0.5-0.3%2C1-0.3%2C1.6-0.3%0A%09%09c0.6%2C0%2C1.2%2C0.101%2C1.5%2C0.199v1.5c-0.4-0.199-0.9-0.399-1.4-0.399c-0.3%2C0-0.6%2C0.101-0.8%2C0.2c-0.2%2C0.101-0.5%2C0.3-0.7%2C0.5%0A%09%09c-0.2%2C0.199-0.3%2C0.5-0.4%2C0.8c-0.1%2C0.301-0.2%2C0.7-0.2%2C1.101l0%2C0c0.4-0.601%2C1-0.8%2C1.8-0.8c0.3%2C0%2C0.7%2C0.1%2C0.9%2C0.199%0A%09%09c0.2%2C0.101%2C0.5%2C0.301%2C0.7%2C0.5c0.199%2C0.2%2C0.398%2C0.5%2C0.5%2C0.801C98.5%2C178.2%2C98.5%2C178.7%2C98.5%2C179.102z%20M96.7%2C179.2%0A%09%09c0-0.899-0.4-1.399-1.1-1.399c-0.2%2C0-0.3%2C0-0.5%2C0.1c-0.2%2C0.101-0.3%2C0.201-0.4%2C0.301c-0.1%2C0.101-0.2%2C0.199-0.2%2C0.4%0A%09%09c0%2C0.199-0.1%2C0.299-0.1%2C0.5c0%2C0.199%2C0%2C0.398%2C0.1%2C0.6s0.1%2C0.3%2C0.2%2C0.5c0.1%2C0.199%2C0.2%2C0.199%2C0.4%2C0.3c0.2%2C0.101%2C0.3%2C0.101%2C0.5%2C0.101%0A%09%09c0.2%2C0%2C0.3%2C0%2C0.5-0.101c0.2-0.101%2C0.301-0.199%2C0.301-0.3c0-0.1%2C0.199-0.301%2C0.199-0.399C96.6%2C179.7%2C96.7%2C179.4%2C96.7%2C179.2z%22%2F%3E%0A%3C%2Fg%3E%0A%3Ccircle%20fill%3D%22%23636363%22%20cx%3D%2295%22%20cy%3D%2295%22%20r%3D%227%22%2F%3E%0A%3C%2Fsvg%3E%0A) 50% 50%/191px no-repeat",
  "a144": " url(img.09a1a1112c577c279435.png)",
  "a145": " url(img.09a1a1112c577c279435.png)",
  "a148": " url('data:image/svg+xml,%3Csvg xmlns=\\"http://www.w3.org/2000/svg\\"%3E%3Crect width=\\"100%25\\" height=\\"100%25\\" style=\\"stroke: rgb(223,224,225); stroke-width: 2px; fill: none; stroke-dasharray: 6px 3px\\" /%3E%3C/svg%3E')",
  "a149": " url('data:image/svg+xml,%3Csvg xmlns=\\"http://www.w3.org/2000/svg\\"%3E%3Crect width=\\"100%25\\" height=\\"100%25\\" style=\\"stroke: rgb(223,224,225); stroke-width: 2px; fill: none; stroke-dasharray: 6px 3px\\" /%3E%3C/svg%3E')",
  "a15": " url(data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%27http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%27%20viewBox%3D%270%200%2042%2026%27%20fill%3D%27%2523007aff%27%3E%3Crect%20width%3D%274%27%20height%3D%274%27%2F%3E%3Crect%20x%3D%278%27%20y%3D%271%27%20width%3D%2734%27%20height%3D%272%27%2F%3E%3Crect%20y%3D%2711%27%20width%3D%274%27%20height%3D%274%27%2F%3E%3Crect%20x%3D%278%27%20y%3D%2712%27%20width%3D%2734%27%20height%3D%272%27%2F%3E%3Crect%20y%3D%2722%27%20width%3D%274%27%20height%3D%274%27%2F%3E%3Crect%20x%3D%278%27%20y%3D%2723%27%20width%3D%2734%27%20height%3D%272%27%2F%3E%3C%2Fsvg%3E)",
  "a150": " url('data:image/svg+xml,%3Csvg xmlns=\\"http://www.w3.org/2000/svg\\"%3E%3Crect width=\\"100%25\\" height=\\"100%25\\" style=\\"stroke: rgb(223,224,225); stroke-width: 2px; fill: none; stroke-dasharray: 6px 3px\\" /%3E%3C/svg%3E')",
  "a151": " url('data:image/svg+xml;utf8,<svg xmlns=\\"http://www.w3.org/2000/svg\\"><rect width=\\"100%\\" height=\\"100%\\" style=\\"stroke: rgb(223,224,225); stroke-width: 2px; fill: none; stroke-dasharray: 6px 3px\\" /></svg>')",
  "a152": " url(img.09a1a1112c577c279435.png)",
  "a153": " url(img.09a1a1112c577c279435.png)",
  "a154": " url(other.09a1a1112c577c279435.png)",
  "a155": " url(img.09a1a1112c577c279435.png)",
  "a156": " url(\\"data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e\\")",
  "a157": " url('data:image/svg+xml;utf8,<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"10\\" height=\\"10\\"><rect fill=\\"gray\\" width=\\"5\\" height=\\"5\\" y=\\"0\\" x=\\"0\\" /></svg>')",
  "a158": " src(\\"http://www.example.com/pinkish.gif\\")",
  "a159": " src(var(--foo))",
  "a16": " url('data:image/svg+xml;charset=utf-8,<svg xmlns=\\"http://www.w3.org/2000/svg\\"><filter id=\\"filter\\"><feGaussianBlur in=\\"SourceAlpha\\" stdDeviation=\\"0\\" /><feOffset dx=\\"1\\" dy=\\"2\\" result=\\"offsetblur\\" /><feFlood flood-color=\\"rgba(255,255,255,1)\\" /><feComposite in2=\\"offsetblur\\" operator=\\"in\\" /><feMerge><feMergeNode /><feMergeNode in=\\"SourceGraphic\\" /></feMerge></filter></svg>#filter')",
  "a160": " url(img.09a1a1112c577c279435.png param(--color var(--primary-color)))",
  "a161": " src(\\"img.png\\" param(--color var(--primary-color)))",
  "a162": " url(img\\\\ img.09a1a1112c577c279435.png)",
  "a163": " url(img.09a1a1112c577c279435.png)",
  "a164": " url( img.png bug)",
  "a165": " url(imgn.09a1a1112c577c279435.png)",
  "a166": " url('data:image/svg+xml;utf8,<svg xmlns=\\"http://www.w3.org/2000/svg\\"	                width=\\"10\\" height=\\"10\\"><rect fill=\\"gray\\" width=\\"5\\" height=\\"5\\" y=\\"0\\" x=\\"0\\" /></svg>')",
  "a167": " url(http://example.com/image.jpg)",
  "a168": " url(http://example.com/image.jpg)",
  "a169": " url(data:,)",
  "a17": " url(\\"data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D%5C%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%5C%22%3E%3Cfilter%20id%3D%5C%22filter%5C%22%3E%3CfeGaussianBlur%20in%3D%5C%22SourceAlpha%5C%22%20stdDeviation%3D%5C%220%5C%22%20%2F%3E%3CfeOffset%20dx%3D%5C%221%5C%22%20dy%3D%5C%222%5C%22%20result%3D%5C%22offsetblur%5C%22%20%2F%3E%3CfeFlood%20flood-color%3D%5C%22rgba(255%2C255%2C255%2C1)%5C%22%20%2F%3E%3CfeComposite%20in2%3D%5C%22offsetblur%5C%22%20operator%3D%5C%22in%5C%22%20%2F%3E%3CfeMerge%3E%3CfeMergeNode%20%2F%3E%3CfeMergeNode%20in%3D%5C%22SourceGraphic%5C%22%20%2F%3E%3C%2FfeMerge%3E%3C%2Ffilter%3E%3C%2Fsvg%3E%23filter\\")",
  "a170": " url(data:,)",
  "a171": " image(ltr 'img.png#xywh=0,0,16,16', red)",
  "a172": " image-set(
		linear-gradient(blue, white) 1x,
		linear-gradient(blue, green) 2x
	)",
  "a173": " image-set(
		url(img.09a1a1112c577c279435.png) type(\\"image/png\\"),
		url(img.09a1a1112c577c279435.png) type(\\"image/png\\")
	)",
  "a174": " image-set(
		url(img.09a1a1112c577c279435.png) 1x,
		url(img.09a1a1112c577c279435.png) 2x
	)",
  "a175": " image-set(
		url(img.09a1a1112c577c279435.png) 1x,
		url(img.09a1a1112c577c279435.png) 2x,
		url(img.09a1a1112c577c279435.png) 3x
	)",
  "a176": " image-set(
		url(img.09a1a1112c577c279435.png) type(\\"image/png\\"),
		url(img.09a1a1112c577c279435.png) type(\\"image/png\\")
	) \\"img.png\\"",
  "a177": " image-set(
		url(img.09a1a1112c577c279435.png) 1x type(\\"image/png\\"),
		url(img.09a1a1112c577c279435.png) 2x type(\\"image/png\\")
	)",
  "a178": " image-set(
		url(img.09a1a1112c577c279435.png) type(\\"image/png\\") 1x,
		url(img.09a1a1112c577c279435.png) type(\\"image/png\\") 2x
	)",
  "a179": " -webkit-image-set(
		url(img.09a1a1112c577c279435.png) 1x
	)",
  "a18": " url(#highlight)",
  "a180": " -webkit-image-set(
		url(img.09a1a1112c577c279435.png var(--foo, \\"test.png\\")) 1x
	)",
  "a181": " src(   \\"img.png\\"   )",
  "a182": " src('img.png')",
  "a183": " src('img.png' var(--foo, \\"test.png\\"))",
  "a184": " src(var(--foo, \\"test.png\\"))",
  "a185": " src(\\"   img.png   \\")",
  "a186": " image-set(url(img.09a1a1112c577c279435.png)1x,url(img.09a1a1112c577c279435.png)2x,url(img.09a1a1112c577c279435.png)3x)",
  "a187": " image-set(url(img.09a1a1112c577c279435.png)1x,url(img.09a1a1112c577c279435.png)2x,url(img.09a1a1112c577c279435.png)3x)",
  "a188": " image-set(url(img.09a1a1112c577c279435.png)1x,url(img.09a1a1112c577c279435.png)2x,url(img.09a1a1112c577c279435.png)3x)",
  "a189": " image-set(url(img.09a1a1112c577c279435.png)1x,url(img.09a1a1112c577c279435.png)2x,url(img.09a1a1112c577c279435.png)3x)",
  "a19": " url(#line-marker)",
  "a190": " image-set(url(img.09a1a1112c577c279435.png)1x)",
  "a191": " image-set(url(img.09a1a1112c577c279435.png)1x/* test*/,/* test*/url(img.09a1a1112c577c279435.png)2x)",
  "a197": " \\\\u\\\\r\\\\l(img.09a1a1112c577c279435.png)",
  "a198": " \\\\image-\\\\set(url(img.09a1a1112c577c279435.png)1x,url(img.09a1a1112c577c279435.png)2x,url(img.09a1a1112c577c279435.png)3x)",
  "a199": " \\\\-webk\\\\it-image-set(url(img.09a1a1112c577c279435.png)1x)",
  "a2": " url(img.09a1a1112c577c279435.png)",
  "a200": "-webkit-image-set(url(img.09a1a1112c577c279435.png)1x)",
  "a22": " \\"do not use url(path)\\"",
  "a23": " 'do not \\"use\\" url(path)'",
  "a24": " -webkit-image-set(url(img1x.09a1a1112c577c279435.png) 1x, url(img2x.09a1a1112c577c279435.png) 2x)
",
  "a25": " image-set(url(img1x.09a1a1112c577c279435.png) 1x, url(img2x.09a1a1112c577c279435.png) 2x)
",
  "a26": " green url() xyz",
  "a27": " green url('') xyz",
  "a28": " green url(\\"\\") xyz",
  "a29": " green url('   ') xyz",
  "a3": " url(img.09a1a1112c577c279435.png)",
  "a30": " green url(
	) xyz",
  "a4": " url(img.09a1a1112c577c279435.png#hash)",
  "a40": " green url(https://raw.githubusercontent.com/webpack/media/master/logo/icon.png) xyz",
  "a41": " green url(//raw.githubusercontent.com/webpack/media/master/logo/icon.png) xyz",
  "a42": " url(img.09a1a1112c577c279435.png?foo)",
  "a43": " url(img.09a1a1112c577c279435.png?foo=bar)",
  "a44": " url(img.09a1a1112c577c279435.png?foo=bar#hash)",
  "a45": " url(img.09a1a1112c577c279435.png?foo=bar#hash)",
  "a46": " url(img.09a1a1112c577c279435.png?)",
  "a47": " url(img.09a1a1112c577c279435.png) url(\\"data:image/svg+xml;charset=utf-8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 42 26' fill='%23007aff'><rect width='4' height='4'/><rect x='8' y='1' width='34' height='2'/><rect y='11' width='4' height='4'/><rect x='8' y='12' width='34' height='2'/><rect y='22' width='4' height='4'/><rect x='8' y='23' width='34' height='2'/></svg>\\") url(img.09a1a1112c577c279435.png)",
  "a48": " __URL__()",
  "a49": " url(img-simple.09a1a1112c577c279435.png)",
  "a5": " url(
	img.09a1a1112c577c279435.png
	)",
  "a50": " url(img-simple.09a1a1112c577c279435.png)",
  "a51": " url(img-simple.09a1a1112c577c279435.png)",
  "a52": " url(img.09a1a1112c577c279435.png)",
  "a53": " url(img.09a1a1112c577c279435.png)",
  "a55": " -webkit-image-set()",
  "a56": " image-set()",
  "a58": " image-set('')",
  "a59": " image-set(\\"\\")",
  "a6": " green url( img.09a1a1112c577c279435.png ) xyz",
  "a60": " image-set(\\"\\" 1x)",
  "a61": " image-set(url())",
  "a62": " image-set(
		url()
	)",
  "a63": " image-set(URL())",
  "a64": " image-set(url(''))",
  "a65": " image-set(url(\\"\\"))",
  "a66": " image-set(url('') 1x)",
  "a67": " image-set(1x)",
  "a68": " image-set(
		1x
	)",
  "a69": " image-set(calc(1rem + 1px) 1x)",
  "a7": " green url( img.09a1a1112c577c279435.png ) xyz",
  "a70": " -webkit-image-set(url(img1x.09a1a1112c577c279435.png) 1x, url(img2x.09a1a1112c577c279435.png) 2x)",
  "a71": " image-set(url(img1x.09a1a1112c577c279435.png) 1x)",
  "a72": " image-set(url(img1x.09a1a1112c577c279435.png) 1x, url(img2x.09a1a1112c577c279435.png) 2x)",
  "a73": " image-set(url(img\\\\ img.09a1a1112c577c279435.png) 1x, url(img\\\\ img.09a1a1112c577c279435.png) 2x)",
  "a74": " image-set(url(img1x.09a1a1112c577c279435.png) 1x, url(img2x.09a1a1112c577c279435.png) 2x),
		image-set(url(img1x.09a1a1112c577c279435.png) 1x, url(img2x.09a1a1112c577c279435.png) 2x)",
  "a75": " image-set(
		url(img1x.09a1a1112c577c279435.png) 1x,
		url(img2x.09a1a1112c577c279435.png) 2x,
		url(img3x.09a1a1112c577c279435.png) 600dpi
	)",
  "a76": " image-set(url(img1x.09a1a1112c577c279435.png?foo=bar) 1x)",
  "a77": " image-set(url(img1x.09a1a1112c577c279435.png#hash) 1x)",
  "a78": " image-set(url(img1x.09a1a1112c577c279435.png?#iefix) 1x)",
  "a79": " -webkit-image-set(url(img1x.09a1a1112c577c279435.png) 1x, url(img2x.09a1a1112c577c279435.png) 2x)",
  "a8": " green url(img.09a1a1112c577c279435.png) xyz",
  "a80": " -webkit-image-set(url(img1x.09a1a1112c577c279435.png) 1x)",
  "a81": " -webkit-image-set(
		url(img1x.09a1a1112c577c279435.png) 1x
	)",
  "a82": " image-set(url(img1x.09a1a1112c577c279435.png) 1x)",
  "a83": " image-set(
		url(img1x.09a1a1112c577c279435.png) 1x
	)",
  "a84": " image-set(url(img1x.09a1a1112c577c279435.png) 1x, url(img2x.09a1a1112c577c279435.png) 2x)",
  "a85": " image-set(
		url(img1x.09a1a1112c577c279435.png) 1x,
		url(img2x.09a1a1112c577c279435.png) 2x,
		url(img3x.09a1a1112c577c279435.png) 600dpi
	)",
  "a86": " image-set(url(img\\\\ img.09a1a1112c577c279435.png) 1x, url(img\\\\ img.09a1a1112c577c279435.png) 2x)",
  "a87": " image-set(url(img1x.09a1a1112c577c279435.png) 1x, url(img2x.09a1a1112c577c279435.png) 2x)",
  "a88": " url(imgimg.09a1a1112c577c279435.png)",
  "a89": " url(img\\\\'img.09a1a1112c577c279435.png)",
  "a9": " green url(img.09a1a1112c577c279435.png) url(other-img.09a1a1112c577c279435.png) xyz",
  "a90": " url(img\\\\'\\\\'\\\\'img.09a1a1112c577c279435.png)",
  "a91": " url(img\\\\(img.09a1a1112c577c279435.png)",
  "a92": " url(img\\\\)img.09a1a1112c577c279435.png)",
  "a93": " url(img\\\\ img.09a1a1112c577c279435.png)",
  "a94": " url(\\"img'() img.09a1a1112c577c279435.png\\")",
  "a95": " image-set(
		url(imgimg.09a1a1112c577c279435.png) 1x,
		url(img\\\\'\\\\'\\\\'img.09a1a1112c577c279435.png) 2x,
		url(img\\\\'img.09a1a1112c577c279435.png) 3x,
		url(img\\\\(img.09a1a1112c577c279435.png) 4x,
		url(img\\\\)img.09a1a1112c577c279435.png) 5x,
		url(img\\\\ img.09a1a1112c577c279435.png) 6x,
		url(\\"img'() img.09a1a1112c577c279435.png\\") 7x
	)",
  "a96": " url(img\\\\'\\\\'\\\\'img.09a1a1112c577c279435.png)",
  "a97": " url(\\"img'() img.09a1a1112c577c279435.png\\")",
  "a98": " url(img\\\\'img.09a1a1112c577c279435.png)",
  "a99": " url(img\\\\(img.09a1a1112c577c279435.png)",
  "b": " url(img.09a1a1112c577c279435.png)",
  "c": " url(img.09a1a1112c577c279435.png)",
  "d": " url(img.09a1a1112c577c279435.png#hash)",
  "e": " url(
    img.09a1a1112c577c279435.png
  )",
  "f": " green url( img.09a1a1112c577c279435.png ) xyz",
  "g": " green url( img.09a1a1112c577c279435.png ) xyz",
  "getPropertyValue": [Function],
  "h": " green url(img.09a1a1112c577c279435.png) xyz",
  "i": " green url(img.09a1a1112c577c279435.png) url(img.09a1a1112c577c279435.png) xyz",
  "j": " green url( img\\\\ img.09a1a1112c577c279435.png ) xyz",
  "k": " green url( img\\\\ img.09a1a1112c577c279435.png ) xyz",
  "l": " green url(img.09a1a1112c577c279435.png) xyz",
  "m": " green url(img.09a1a1112c577c279435.png) xyz",
  "n": " green url(img.09a1a1112c577c279435.png) xyz",
}
`;

exports[`ConfigCacheTestCases custom-modules json-custom exported tests should transform toml to json 1`] = `
Object {
  "owner": Object {
    "bio": "GitHub Cofounder & CEO
Likes tater tots and beer.",
    "dob": "1979-05-27T07:32:00.000Z",
    "name": "Tom Preston-Werner",
    "organization": "GitHub",
  },
  "title": "TOML Example",
}
`;

exports[`ConfigCacheTestCases records issue-2991 exported tests should write relative paths to records 1`] = `
"{
  \\"chunks\\": {
    \\"byName\\": {
      \\"main\\": 179
    },
    \\"bySource\\": {
      \\"0 main\\": 179
    },
    \\"usedIds\\": [
      179
    ]
  },
  \\"modules\\": {
    \\"byIdentifier\\": {
      \\"./test.js\\": 393,
      \\"external node-commonjs \\\\\\"fs\\\\\\"\\": 147,
      \\"external node-commonjs \\\\\\"path\\\\\\"\\": 17,
      \\"ignored|./.|pkgs/somepackage/foo\\": 802
    },
    \\"usedIds\\": [
      17,
      147,
      393,
      802
    ]
  }
}"
`;

exports[`ConfigCacheTestCases records issue-7339 exported tests should write relative dynamic-require paths to records 1`] = `
"{
  \\"chunks\\": {
    \\"byName\\": {
      \\"main\\": 179
    },
    \\"bySource\\": {
      \\"0 main\\": 179
    },
    \\"usedIds\\": [
      179
    ]
  },
  \\"modules\\": {
    \\"byIdentifier\\": {
      \\"./dependencies/bar.js\\": 379,
      \\"./dependencies/foo.js\\": 117,
      \\"./dependencies|sync|/^\\\\\\\\.\\\\\\\\/.*$/\\": 412,
      \\"./test.js\\": 393,
      \\"external node-commonjs \\\\\\"fs\\\\\\"\\": 147,
      \\"external node-commonjs \\\\\\"path\\\\\\"\\": 17
    },
    \\"usedIds\\": [
      17,
      117,
      147,
      379,
      393,
      412
    ]
  }
}"
`;
